--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,60 +1,30 @@
 ---
-title: 樱花深度报道┃习近平的“末日”会让中国和世界陷入战争吗？（上）
+title: 樱花FM┃公屋改隔离营 大学宿舍也被纳入
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2036280/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2036528/)
 
-编译：东京樱花团/Hopkins
+音频：东京樱花团/战友520
 
-（内容摘要）
-• 中国看起来威武的领导人习近平有“大量的国内敌人”。 ——国际战略研究协会主席兼《国防与外交战略政策》（ Defense & Foreign Affairs Strategic Policy）主编格雷戈里·科普利（Gregory Copley）于 2022 年 2 月在盖斯通研究所（Gatestone Institute）说。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/公屋改隔离营-大学宿舍也被纳入.png)
 
-• 习近平制造了这种反对意见。在 2012 年底成为中国的统治者后，他从其他人手中攫取了权力，然后在清洗中监禁了数万名反对者，他称之为“反腐败”运动。
+林郑月娥今早表示，将部分已落成的公共屋邨改作隔离设施，可提供逾3000个单位。她明日（16日）将与酒店业界商讨提供数千至1万个隔离房间的方案，并透过教育局联络各间大学，确定可否腾空学生宿舍作隔离设施。近日港大及中大分别对学生宿舍的使用做出改变，港大对违规染疫的学生永久禁止入住，中大则勒令所有宿生24小时内迁离宿舍。
 
-• 北京陷入恐慌，上个月新增信贷总额近万亿美元，创历史新高…. 如果包括所谓的“隐性债务”，该国的债务总额大约在 350% 左右国内生产总值。
+香港的疫情严峻，每日的感染个案飙升，港府畏于中共的淫威继续执行强制防疫措施，不断将被感染的市民送入数个隔离营中禁锢，导致原本丢空多时的营房瞬间爆满。港府官员之前曾提出寻觅土地，由中共承建商前来快速兴建港版“火神山隔离营”，之后媒体曝出本港几所大学驱赶住宿生，今日港府发言证实，港府将征用现有房屋资源缓解强制隔离压力，包括部分已落成的公共屋邨、酒店、大学宿舍等。港府全然不顾强征对业主或租户将造成的影响，一味顺着中共的死亡加速列车将香港带入地狱中，据悉，那些被征用的新公屋，大部分已经分派于轮候公屋的市民，新居尚未入住就被改成隔离营，十分不吉利，而且轮候公屋需时超过十年之久，这些港人以为苦尽甘来，却被拒之门外。港府口口声声要解决港人的住房问题，在危难面前却总是从最基层的市民下手，剥夺他们居住公屋的权力，从不见港府向达官贵胄下手，征用他们的高尚住宅和大厦做隔离营！
 
-• 毫不奇怪，中国公司现在正在违约。债务危机如此严重，它可以拖垮中国的经济——以及国家的金融和政治体系。
+香港的校园现在正值假期，不少外地学生因为疫情而选择留在学校，前些日子一些议员曾提出过要利用校园操场做强检场地，而港府却觊觎大学宿舍，不惜与大学高层暗通款曲驱赶住宿生，在中共管制下的香港，培养民主斗士的大学作出更多没有人性的决定也是理所当然的。
 
-• 在习最近的烦恼中，匿名作者“方舟与中国”写了一篇42000字题为《客观评价习近平》的文章。1 月 19 日在中国赞助的 6park 网站上发布的这篇反习长篇似乎是由前领导人江泽民领导的共产党上海帮派的几名成员的作品。江派一直在对习近平进行狙击，现在正在带头对他发起攻击。
+弹丸之地的香港每日感染的个案已经高达5千，而内地感染人数仅二十多例，天差地别的数字彰显中共独裁的假恶丑。频繁的大规模强检、强制隔离和恐怖的感染数字，成功击溃港人抵制疫苗的防线，更多的成人跑去注射第三针，更多的家长把幼童送去扎针，更多的长者如坐针毡甚至跳楼结束自己的生命。爆料革命郭文贵先生多次警告过，新冠疫苗一日不停，新冠病毒之害就不会停止。中共和港府对港人的种种恶行终归于注射新冠疫苗，这是最隐蔽最有效消灭九成香港人的毒招。
 
-• 不幸的是，习近平的问题可能会成为我们共同的问题。由于各种内部政治原因，他的风险门槛很低，并且有很多理由选择通过与其他一些国家发动战争来转移精英批评和民众的不满情绪。
+文字版原文：
 
-• 中国共产党一直认为它与美国的斗争是存在的——2019 年 5 月，官方《人民日报》宣布对美国发动“人民战争”——并且这种敌意在过去一年变得更加明显。
 
-• 恶毒的反美主义表明习近平正在为打击美国寻找正当理由。中国政权经常利用其媒体先发出警告，然后再发出信号。
+| [公屋改隔离营 大学宿舍也被纳入 – GNEWS](https://gnews.org/zh-hans/2008605/) |
+| --- |
 
-• 美国现在已经被警告了。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-793.png)（图片说明）习近平于2020年5月28日在北京人民大会堂。  (Photo by Kevin Frayer/Getty Images)
-中共领导人习近平制造了他的反对意见。在 2012 年底成为统治者后，他从其他人手中攫取了权力，然后在清洗中监禁了数以万计的反对者，他称之为“反腐败”运动。不幸的是，习近平的问题可能会成为我们的问题。恶毒的反美主义表明习近平正在为打击美国寻找正当理由。
 
-当卡车司机接管加拿大首都渥太华并关闭通往美国的边境入境点时，一些人称其为“全国性起义”。民主世界各地都发生了大规模示威游行。人们已经受够了两年的授权和其他疾病控制措施。
-
-在世界上人口最多的州，情况并非如此，该州保持着世界上最严格的 COVID-19 控制。众所周知，中华人民共和国境内没有针对抗冠状病毒努力的民众抗议活动。
-
-然而，中国并不稳定，正如反对派人士最近发表的一篇文章（见下文）所说，习近平正面临着他的“末日”。
-
-起义不是在整个社会，而是在共产党的高层。
-
-正如国际战略研究协会会长格雷戈里·科普利（Gregory Copley）告诉盖茨通（Gatestone）的那样，中国看起来威武的领导人习近平有“大量的国内敌人”。
-
-习近平制造了这种反对意见。在 2012 年底成为中国的统治者后，他从其他人手中攫取了权力，然后在清洗中监禁了数万名反对者，他称之为“反腐败”运动。
-
-习近平还利用这次Covid-19病毒发挥了很大的作用。正如《国防与外交战略政策》主编科普利所指出的，“习近平的‘零新冠病毒’政策实际上与其说是为了阻止新冠病毒的传播，不如说是为了压制他的内部敌人，无论是在公开和党内。”
-
-“大阵”现在开始反击。习近平在处理该国停滞不前的经济时最为脆弱。一方面，针对 COVID 的严厉运动——大规模检测、细致的接触者追踪、严格的封锁——当然削弱了消费，而消费是北京吹捧的经济核心。
-
-北京正惊慌失措，上个月新增信贷总额近万亿美元，创历史新高。中国的技术专家也变得狡猾，开始采用广为人知的环球资源合伙人安德鲁·科利尔（Andrew Collier）所说的“影子刺激”——由地方政府及其实体提供的刺激，以使中央政府能够避免报告支出。
-
-中国需要一个充满活力的经济来偿还巨额债务，这主要是因为北京过度刺激经济，特别是从 2008 年开始。如果包括所谓的“隐性债务”，该国的总债务接近 350%国内生产总值。
-
-毫不奇怪，中国公司现在正在违约。债务危机如此严重，它可以拖垮中国的经济——以及国家的金融和政治体系。
-
-（未完待续）
-
-信息来源：[Will Xi Jinping’s “End Of Days” Plunge China & The World Into War?](https://www.zerohedge.com/geopolitical/will-xi-jinpings-end-days-plunge-china-world-war)
-
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+*编辑：东京樱花团/asket   
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
