--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,49 +1,51 @@
 ---
-title: 人权组织：要求爱彼迎撤下新疆西藏房源
+title: CDC紧急警告：每个人都有血栓的风险！即使是最健康的运动员
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2036126/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2036355/)
 
-#### **【雅典娜观察】和您一起洞察世界**
+编译： Jenny Ball
 
-**整理/编辑：文泓**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/99459a8a83ff23011f981e633d392a11.jpg)图片：AFP
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/9-25.png)图片来源：The Guardian & 雅典娜设计组
+**CDC **和辉瑞公司最近都发布了关于**“**血栓**”**的公开警告。
+
+去年 2 月 10 日，疾病预防控制中心（CDC）发出警告，竟然想使年轻人和健康运动员出现血栓的想法正常化。
+
+然而，在 COVID 疫苗出现之前，没有人听说过这种频繁出现的现象。
+
+“ [你知道] 任何人都可以形成血栓吗？ 无论您是运动员还是球迷，都不要让血块毁了本周末的比赛。 了解如何保护您的健康：https://bit.ly/2lOpGEB，”CDC 在推特上写道。
+
+但 CDC 没有在他们的网站上提到 COVID-19 疫苗是可能增加这种风险的因素之一。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-18-at-10.02.17-PM.jpg)图片来自原文
+
+去年，由明尼苏达州罗切斯特市梅奥诊所的研究人员进行并发表在《美国医学会杂志》(JAMA) 上的一项令人震惊的新研究得出结论，强生公司的 Covid 疫苗会增加患大脑中罕见且致命的凝血状况。
+
+据市场观察报道，牛津大学去年初的一项研究还显示，接种辉瑞和莫德纳疫苗的人，在接种疫苗后出现血栓的人数与阿斯利康的人数大致相同。
+
+在 CDC 发出警告后，辉瑞公司于 2 月 14 日发布了关于“深静脉血栓形成”或静脉血栓的公开警告。
+
+“深静脉血栓形成 (DVT) 是深静脉中的血凝块，可进入肺部，导致肺栓塞 (PE)。PE的症状包括呼吸困难和胸痛。如果出现症状，请联系您的医生——现在不是等待的时间，”辉瑞在推特上写道。
+
+评论：邪恶的是，这些信息**CDC**和辉瑞在强制人们当**mRNA**刺突蛋白试验老鼠之前就知道，证据就是：
+
+- 他们不敢发布辉瑞报告，**CDC**在批准辉瑞在全世界人身上试验时不需要**75**年，现在却需要**75**年，**55**年发布？他们知道他们犯下的人类屠杀罪，只是等到**55**年后他们已经去见他们的马克思了，企图逃避惩罚！
+- 正如文贵先生一再告诫大家，疫苗真正的危害远没有开始，那将会在今年的五月份。**CDC**和辉瑞知道这个时间点，所以，现在又企图摇身一变，成为灾难发生前的警报人。他们为何不警告血栓是怎么形成的？为什么一下子就让人人有血栓的危机了？因为他们给**50-80-90%**的人都注射了刺突蛋白，那就是形成血栓的罪魁祸首！他们还人们一针接一阵注射，每针**mRNA(CDC**和辉瑞叫疫苗**)**意味着**40**万亿个刺突蛋白进入体内！
 
 
-大纪元一项研究指出，尽管人权组织与美国议员们不断关注，冬奥会赞助商爱彼迎（Airbnb）仍在[新疆](https://www.epochtimes.com/gb/tag/%E6%96%B0%E7%96%86.html)和[西藏](https://www.epochtimes.com/gb/tag/%E8%A5%BF%E8%97%8F.html)经营着数百个住宿点。
+**CDC**，辉瑞想小聪明，结果不打自招，用中共最爱用的话：搬起石头砸自己的脚！
 
-1月，美国参议员杰夫‧默克利和众议员詹姆斯‧麦戈文致函爱彼迎首席执行长布莱恩‧切斯基，关注该公司在新疆的房源和涉及的相关人权问题。
+**mRNA**杀害的无数个无辜的生命，他们在天之灵能放过你们这些罪犯吗？
 
-他们指出，爱彼迎在新疆的十几处房源位于新疆生产建设兵团的土地设施内，该兵团于2020年已受到美国财政部的制裁。去年12月，共和党参议员马可‧卢比奥也要求，爱彼迎公司应下架新疆生产建设兵团的出租房信息。
+**参考资料：**[thegatewaypundit][“Everyone is at Risk for Blood Clots!” – CDC and Pfizer Issue Urgent Warnings on Blood Clots Even in “The Healthiest Athletes”](https://www.thegatewaypundit.com/2022/02/everyone-risk-blood-clots-cdc-pfizer-issue-urgent-warnings-blood-clots-even-healthiest-athletes/?utm_source=Email&amp;utm_medium=the-gateway-pundit&amp;utm_campaign=dailypm&amp;utm_content=daily)
 
-根据伦敦非营利组织“自由[西藏](https://www.epochtimes.com/gb/tag/%E8%A5%BF%E8%97%8F.html)”（Free Tibet）的研究数据，纳斯达克上市的爱彼迎在西藏与[新疆](https://www.epochtimes.com/gb/tag/%E6%96%B0%E7%96%86.html)拥有了约780个住宿点。
+* * *
 
-“**[自由西藏](https://www.epochtimes.com/gb/tag/%E8%87%AA%E7%94%B1%E8%A5%BF%E8%97%8F.html)的研究发现，爱彼迎正从西藏和新疆维吾尔地区的780个住宿点中获利，而中共政府正在那里进行广泛的侵犯人权行为，**”该组织在推特上说。
+*审核：文乐
+校对：花羽
+发稿：信心的选择*
 
-上述两个地区的少数民族长期以来一直遭受中共宗教压迫和文化抹杀。其中中共在新疆关押了超过100万名维吾尔少数民族，并对妇女进行强制绝育，美国和许多西方国家的立法者，将此称为种族灭绝。
-
-据法新社报导，爱彼迎也是[北京冬季奥运会](https://www.epochtimes.com/gb/tag/%E5%8C%97%E4%BA%AC%E5%86%AC%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A.html)的最大支持者之一，其5亿美元的赞助协议将持续到2028年。该公司向法新社表示，它拥有跨越几届奥运会的“长期合作伙伴关系”，并已与国际奥委会讨论过“人权的重要性”。
-
-这家总部位于旧金山的民宿租屋平台，在美国公开支持进步主义的政治议程，如美国的“黑命贵”（BLM）种族运动。
-
-然而，尽管遭人权团体与美国议员多次表示关切，爱彼迎仍持续在西藏新疆开展业务，一些批评人士指出，在人权问题上，该公司使用双重标准。
-
-法新社指出，在国际关注新疆人权问题之际，中共当局正大力宣传新疆是“一个充满活力的旅游地点”，并称其是中国的“冬季运动中心”。
-
-“中国以外专家和维吾尔人表示，新疆繁荣的旅游业掩盖了一个更黑暗的现实”，法新社表示，“许多历史建筑被拆除，以便为游客友好的新开发项目让路。”
-
-自2021年1月起，中共政府在新疆实施种族灭绝暴行在全世界昭然若揭，国际社会已经多次开始抵制新疆制品，去年多家跨国公司联合抵制新疆棉，是一次规模较大、影响力较大的国际行动。爱彼迎作为美国上市公司，与美国政令对着干，不回应美国议员关切的话题，反而在冬奥会上与中共一起搭台唱戏。正如郭先生所言，参加冬奥会的人未来会以这份经历为耻，配合独裁中共的爱彼迎又能走多远呢？
-
-新闻链接：[人权组织：Airbnb正通过新疆西藏的房源获利 |](https://www.epochtimes.com/gb/22/2/19/n13588582.htm)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
 
  
 
