--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,7 +1,28 @@
 ---
-title: 中/英文视频稿件上传指南
+title: 郭文贵精品视频-中共国经济已到危险时刻，Hpay来的正是时候
 ---
-`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2036075/)
+`cindy` [轉載自GNews](https://gnews.org/zh-hans/2036303/)
+
+撰稿：澳喜cindy
+
+郭先生在过去的视频中曾经多次讲过：中共国银行是经济崩塌的大雷之一。中共在70年执政期间，以骗治国、以假治国，对老百姓的洗脑，温水煮青蛙，老百姓在不知不觉中就被掌权者把钱抢走了，把银行掏空了。从房地产业贷款集中度的管理要求和统计来看，工商银行、农业银行、中国银行、建设银行、交通银行、邮储银行，在房地产的各项贷款总计均已超过72.5%的监管红线。而目前房地产行业已经进入了寒冬，那么各银行势必遭到牵连。郭先生几年前的预警如今即将到来了！
+
+中共国的现状是：20几家商行已宣告破产，200多家银行等待破产；房地产过去的将近20几家大的企业破产，2万家的小企业破产，和2000家在等待破产。以及这几年印了将近50万亿人民币（政府自己承认的），导致现在的经济严重的通胀通缩并存。以及存户存在银行的巨额财产取不出来而导致的存户和银行之间随时可能“爆破”的这种存贷关系。确实太可怕了！
+
+2017年7月15日郭先生视频中所做出的精准的分析和判断是基于他对中共邪恶政府的见不得人的勾当的深入了解和对经济、金融的本质的精通，从那时开始他就着手打造金融诺亚方舟，在这5年期间他一边爆料对中共邪恶势力开炮；一边应付中共法律超限战的缠诉；还按计划完成了我们今天看到的可喜的成果。他不但做到了并且做的那么完美、那么现代、那么安全、那么超前、那么来的正是时候、那么人见人爱。
+
+在中共这条大船就要下沉的关键之际，郭先生给国内的大船上的人送来了救生的诺亚方舟—人民币通过特殊通道可以安全地转出来并换成保值增值的Hcoin。无论是中共政府还是任何人都无法追踪到它。
+
+在21世纪的金融大变革的时代，郭先生设计出的Hpay可使Hcoin在世界任何地方自由流通，它与中共完全控制的数字货币截然不同。中共及达沃斯党们对此万分憎恨。他们欲奴役百姓而设计的“100年金融计划”因Hcoin的诞生而受阻。全世界愿意自由的、不愿被束缚、被剥削的老百姓最值得庆幸的是今生有幸遇到菩萨在世的郭先生，才使我们的财务得到自由！感恩、感谢郭先生的辛苦付出！
+
+*编辑：cindy*
+
+【[澳喜文章1](https://gnews.org/zh-hans/author/aujenny/)】
+【[澳喜文章2](https://gnews.org/zh-hans/author/himalaya-australia/)】
+
+
+
+ 
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
 
