--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,28 +1,64 @@
 ---
-title: 中共已经开始部署序贯加强免疫接种计划
+title: 樱花深度报道┃习近平的“末日”会让中国和世界陷入战争吗？（下）
 ---
-`儒为` [轉載自GNews](https://gnews.org/zh-hans/2036057/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2036282/)
 
-作者：意大利罗马达芬奇农场-儒为
-![](https://assets.gnews.org/wp-content/uploads/2022/02/序贯接种.jpeg)封面来源：网络图片
-新华社北京2022年2月19日报道，中共国家卫生健康委疾控局副局长吴良有在国务院联防联控机制新闻发布会上介绍，近日，经国务院联防联控机制批准，国家卫生健康委已经开始部署序贯加强免疫接种。
+编译：东京樱花团/Hopkins
 
-**全世界都在逐渐停止强制疫苗接种和强推疫苗护照计划，中共却依然反世界反人类的继续以各种“为你好”的理由推行疫苗接种计划，可谓疯狂至极。**
+（内容摘要）
+• 中国看起来威武的领导人习近平有“大量的国内敌人”。 ——国际战略研究协会主席兼《国防与外交战略政策》（ Defense & Foreign Affairs Strategic Policy）主编格雷戈里·科普利（Gregory Copley）于 2022 年 2 月在盖斯通研究所（Gatestone Institute）说。
 
-序贯接种指间隔接种（交替接种）不同技术路线的同种疫苗。中共疾控中心免疫规划首席专家王华庆介绍，美洲、欧洲和东南亚的一些国家已开始实施序贯加强免疫接种。
+• 习近平制造了这种反对意见。在 2012 年底成为中国的统治者后，他从其他人手中攫取了权力，然后在清洗中监禁了数万名反对者，他称之为“反腐败”运动。
 
-世界卫生组织支持灵活的同源疫苗和异源疫苗接种计划。对于考虑异源接种方案的国家，推荐采用与首剂接种不同技术路线的新冠病毒疫苗进行后续剂次接种。
+• 北京陷入恐慌，上个月新增信贷总额近万亿美元，创历史新高…. 如果包括所谓的“隐性债务”，该国的债务总额大约在 350% 左右国内生产总值。
 
-**中共、美洲、欧洲和东南亚，再加上世卫组织都在推进“序贯接种”。可见，这是一次有组织有计划的人类大清洗计划的延续。**
+• 毫不奇怪，中国公司现在正在违约。债务危机如此严重，它可以拖垮中国的经济——以及国家的金融和政治体系。
 
-王华庆介绍，序贯加强免疫接种有四个重要条件：第一，此次序贯加强免疫的接种对象是18岁以上人群。第二，接种对象需满足已完成2剂次灭活疫苗接种的条件，且这2剂次接种的是国药中生北京公司、北京科兴公司、国药中生武汉公司的新冠病毒灭活疫苗。第三，要全程完成2剂次灭活疫苗接种，且接种间隔不能短于6个月。2针打不死你，不同技术的疫苗再打，这不就是在拿活人做实验吗？
+• 在习最近的烦恼中，匿名作者“方舟与中国”写了一篇42000字题为《客观评价习近平》的文章。1 月 19 日在中国赞助的 6park 网站上发布的这篇反习长篇似乎是由前领导人江泽民领导的共产党上海帮派的几名成员的作品。江派一直在对习近平进行狙击，现在正在带头对他发起攻击。
 
-**中共毁人不倦，第三针疫苗接种还在进行中，现在又推出序贯加强免疫接种，丧心病狂都不足以形容之。中共最擅长的就是偷换概念欺骗老百姓，而老百姓被卖了、被杀了还在帮着中共数钱。中共病毒疫苗是中共病毒的延续，既要杀死你又要把你的钱包掏空。全世界中共病毒疫苗后遗症逐渐显现，中共通过独裁手段依然变着法的欺骗老百姓继续疫苗接种，其不知这些所谓的“序贯接种”疫苗还是“换汤不换药”而已。**
+• 不幸的是，习近平的问题可能会成为我们共同的问题。由于各种内部政治原因，他的风险门槛很低，并且有很多理由选择通过与其他一些国家发动战争来转移精英批评和民众的不满情绪。
 
-新闻来源：🔗[新冠疫苗序贯加强免疫接种启动！你想知道的都在这儿](http://m.news.cn/sn/2022-02/20/c_1128397713.htm)
+• 中国共产党一直认为它与美国的斗争是存在的——2019 年 5 月，官方《人民日报》宣布对美国发动“人民战争”——并且这种敌意在过去一年变得更加明显。
 
-*编辑/校对/发稿：意大利罗马达芬奇农场-儒为*
+• 恶毒的反美主义表明习近平正在为打击美国寻找正当理由。中国政权经常利用其媒体先发出警告，然后再发出信号。
 
+• 美国现在已经被警告了。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1873.png)（图片说明）习近平在庆祝中国共产党成立100周年大会上讲话（来源：中国日报网）
+三十年来，中国领导人基本上不受批评，因为所有重要的决定都由共产党高层共同承担。然而，习近平上台后也承担了责任——换句话说，没有其他人可以责备。近年来，随着中国的发展不顺，针对经常被称为“无所不能的主席”的习近平的批评正在升温。
+
+高层领导人之间的不和有加剧的迹象。在最近的苦恼中，化名为“方舟与中国”的作者写了一篇42000字的文章，题为《对习近平的客观评价》。 1 月 19 日在中国赞助的 6park 网站上发布的反习长篇似乎是由前领导人江泽民领导的共产党上海帮派的几名成员的作品。江派一直在对习近平进行狙击，现在正在带头对他发起攻击。
+
+方的作品包含了先前提出的批评，但以一种全面的方式进行。方指责习近平破坏了经济。
+
+“习近平将是他自己失败的建筑师，”方在咆哮的结尾写道，在题为“习近平的结局”或“末日”的一节中。 “他的治理风格根本不可持续；它会产生更新、更大的政策失误。”
+
+方指出，习近平能够利用微弱的反对力量，但未能取得多大成就。 “习近平的政策是倒退的和衍生的，他的成功很小，失误很多，”亚洲协会的杰瑞米·巴姆（Geremie Barme）写道，他翻译了这篇文章，总结了方的思想。方认为习近平“应该得到低于零的分数”。
+
+习近平不会让十年的零分数妨碍他继续统治。共产党的规范要求他在第 20 次全国代表大会上下台，如果按照惯例，将在今年秋天的某个时候举行。他显然想要打破以往的惯例成为第三个总书记任期，这样他就可以成为外人所说的“终身独裁者”。大多数观察家预计他将获得这个新任期。
+
+可能。方舟的文章表明，共产党领导人在公开场合表达分歧正在冒着稳定的风险。因此，习近平现在意识到他正处于生命的斗争中。
+
+不幸的是，习近平的问题可能会成为我们的问题。由于各种内部政治原因，他的风险门槛很低，并且有很多理由选择其他一些国家来转移精英批评和民众的不满情绪。
+
+1966年，共产主义中国的第一任统治者毛泽东发动了长达十年的文化大革命，以战胜北京的政敌。习近平现在也在做同样的事情，尤其是他的“共同富裕”计划，它可以让中国回到 1950 年代。
+
+然而，与毛泽东不同的是，习近平有野心让世界陷入战争，并且有理由很快发动攻击。
+
+习近平的目标是美国。去年8月29日，中国最权威的刊物《人民日报》指责美国对中华民族发动“野蛮”攻击。当月21日，人民日报控制的小报《环球时报》暗示美国正在与中国的“敌人”合作。
+
+中国共产党一直认为它与美国的斗争是存在的——2019 年 5 月，官方《人民日报》宣布对美国发动“人民战争”——但这种敌意在过去一年中变得更加明显。
+
+恶毒的反美主义表明习近平正在为打击美国寻找正当理由。中国政权经常利用其媒体先发出警告，然后再发出信号。
+
+美国现在已经被警告了。
+
+（全文完）
+
+信息来源：[Will Xi Jinping’s “End Of Days” Plunge China & The World Into War?](https://www.zerohedge.com/geopolitical/will-xi-jinpings-end-days-plunge-china-world-war)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
