--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,33 +1,60 @@
 ---
-title: 该来的总会来
+title: 樱花深度报道┃习近平的“末日”会让中国和世界陷入战争吗？（上）
 ---
-`骄子` [轉載自GNews](https://gnews.org/zh-hans/2036051/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2036280/)
 
-文：银河系农场｜骄子
-![](https://assets.gnews.org/wp-content/uploads/2022/02/e3e9af30d7db241cbebe81ba060050de.jpg)
-有句话叫做，站在风口上，猪都能飞起来。这话意思就是一个像猪那样笨的人，只要把他放在风口上，再笨重他也能飞起来。这句话早年被很多做金融的，尤其是一夜暴富的土大款奉为圭皋。一夜暴富的例子很多很多，一直猪成为了风口上的亮丽风景，谁都会去多看两眼，谁还管那是个猪呢。这是土大款的统一口头禅，老子有的是钱，确实，这个世界就没有钱解决不了的事，如果有，那就再多拿点钱出来，直到能够把这事儿解决掉。人们已经在心里给每件事标注好了价格，那些所谓的无法解决，不过是在坐等涨价，等一个合适的价格达到预期，照样能够解决得一干二净。
+编译：东京樱花团/Hopkins
 
-以前大人们爱问，你怎么能得上抑郁症呢，你到底不高兴啥呢，你有吃有喝，还有这么好的房子这么好的车，这么好的朋友天天陪着你玩儿，啥啥能让人给抑郁了呢？任何一种生活方式的深度探讨，都是彼此人性的投射。那些认为得上抑郁症很奇怪的人，基本上认为精神层面不应该得病。吃饱喝足睡好了觉，叫做上帝保佑吃饱了饭的人，这种吃饱了肚子惶惶不安的人哪里还敢妄想上帝的孩子都会跳舞这件事？是的，共产党就是这样的组织，你吃饱喝足了像猪一样活着，就足够了，再不需要任何疏导，猪怎么会得上抑郁症呢。很多人解决抑郁的办法叫做马云说的做自己，比如乱交，酗酒、吸毒，裸身在闹市里大喊大叫，你可以说这是一种行为艺术，但马云从来也不会说，所谓的做自己，不等于做动物，自己是自己，动物是动物，让一个人当众表演兽性的一面叫做所谓的释放自己，做自己，这种教唆是在犯罪，于自身于他人来说都有百害而无一利。
+（内容摘要）
+• 中国看起来威武的领导人习近平有“大量的国内敌人”。 ——国际战略研究协会主席兼《国防与外交战略政策》（ Defense & Foreign Affairs Strategic Policy）主编格雷戈里·科普利（Gregory Copley）于 2022 年 2 月在盖斯通研究所（Gatestone Institute）说。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/v2_bac0e2e06b314c5da7ad15a18c51fc80_img_000.jpg)
+• 习近平制造了这种反对意见。在 2012 年底成为中国的统治者后，他从其他人手中攫取了权力，然后在清洗中监禁了数万名反对者，他称之为“反腐败”运动。
 
-很多人认为抑郁症的原因就是没有钱，确实是，钱能够解决很多问题，但是照样有钱救不了的抑郁症。甚至有人就是因为有了很多钱得上抑郁症的，没钱了他反而没那个病了。现代社会发展的层次，已经将很多看不见的东西也都标示好了价格，比如一次心理疏导，一次律师援助，这些精神方面的收费昂贵，但不见得效果就很好。十年前网络上流行一句话，说从互联网时代开始，人类即将步入虚拟时代。虚拟这个词的含义很大，并且因为它本来的意思，虚拟给人感觉就是不真实，虚幻的，虚假的。果然在最近十年间，我们就处在这样一个虚拟的时代中，一切都是不真实的，除了互联网这种形式，无论任何人，哪怕是一条狗都可以在网上拥有自己的社交媒体账号，由于AI技术的发达，各种语言的切换是无缝的，人们可以根据自动翻译理解各种语言，再也不需要以前那些乱七八糟的引入机制，甚至翻译一本书，还要找非常懂这个语言的人来翻译。一本书，讲的精彩内容，往往会被浓缩成几句话，翻译成各种语言在互联网上传播。你们这么疯狂地传播，肯定让那些背后的利益集团不开心了，但是这是我们的想法，其实背后的利益集团已经部署好了一切的工具，就是这个互联网，毕竟互联网上的东西，不是你搜索就有的，总有人要先把内容上传。现在媒体的作用也是如此，上传的东西可以说是受到背后的人的指使的，你想上传什么都可以，撒谎骗人有人罩着你，不用负任何责任，尤其一些经过几百年运作的媒体已经形成了牢不可破的话语权。
+• 北京陷入恐慌，上个月新增信贷总额近万亿美元，创历史新高…. 如果包括所谓的“隐性债务”，该国的债务总额大约在 350% 左右国内生产总值。
 
-抑郁症往往就来自这些冲突。互联网给人打开了一扇交流的大门，抑郁症发现这扇门来来回回荡来荡去，自己既不属于这里，也不知道属于哪里，总之就悬空在半中间，一不小心就能坠落，日常就靠那口气儿吊着。人们老说网路电子游戏是迷幻剂，打游戏多的人容易患上抑郁症，因为他们体验过游戏中的感受，和这个真实世界是一模一样的，在游戏里做过了皇帝，那种万人之上的感觉非常真实。那么到底真实世界和虚拟世界的界限在哪里？我们现在生活的世界和互联网那个世界到底那个才是真的，这也是抑郁症的来源。很多想不通的问题，解不开的谜团，再加上两个世界的不同落差，诞生了一个抑郁症。
+• 毫不奇怪，中国公司现在正在违约。债务危机如此严重，它可以拖垮中国的经济——以及国家的金融和政治体系。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/v2-3d04c230c520090ce5132339d7269d17_1440w.jpg)
+• 在习最近的烦恼中，匿名作者“方舟与中国”写了一篇42000字题为《客观评价习近平》的文章。1 月 19 日在中国赞助的 6park 网站上发布的这篇反习长篇似乎是由前领导人江泽民领导的共产党上海帮派的几名成员的作品。江派一直在对习近平进行狙击，现在正在带头对他发起攻击。
 
-该来的总会来，正如时间从来不会停止，历史也从来不会不碾压一个倒行逆施的人，不管是谁。当数字货币把互联网、真实世界，以及物联网联系在一起的时候，似乎抑郁症们得到了活下去的好几口气，不再是一口气吊着半死不活的状态了。数字货币很大程度上融合了社会的日常生活准则，比如，不要中间商，互联网的平台有很大的权力来决定给你看什么，不给你看什么，你了解一个人，总得看照片，就看照片这个事儿，都有数以亿计的滤镜和效果在等着迷惑你，你为什么就不能给我看看真实的肉体，是的，肉体在你面前都可以用化妆来迷惑，有的人上床不卸妆不过夜，完了就走。这种像塑料一样的虚拟人设是可以存在的，毕竟有的人就好这一夜风流。存在可以，但人类社会不可能都是这样，家庭依然是最坚不可摧的单位，没有了家庭，人类社会有人也都是机器。
+• 不幸的是，习近平的问题可能会成为我们共同的问题。由于各种内部政治原因，他的风险门槛很低，并且有很多理由选择通过与其他一些国家发动战争来转移精英批评和民众的不满情绪。
 
-*未完待续…….*
+• 中国共产党一直认为它与美国的斗争是存在的——2019 年 5 月，官方《人民日报》宣布对美国发动“人民战争”——并且这种敌意在过去一年变得更加明显。
 
-* * *
+• 恶毒的反美主义表明习近平正在为打击美国寻找正当理由。中国政权经常利用其媒体先发出警告，然后再发出信号。
 
-作者：骄子
-发布：骄子
+• 美国现在已经被警告了。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-793.png)（图片说明）习近平于2020年5月28日在北京人民大会堂。  (Photo by Kevin Frayer/Getty Images)
+中共领导人习近平制造了他的反对意见。在 2012 年底成为统治者后，他从其他人手中攫取了权力，然后在清洗中监禁了数以万计的反对者，他称之为“反腐败”运动。不幸的是，习近平的问题可能会成为我们的问题。恶毒的反美主义表明习近平正在为打击美国寻找正当理由。
 
-[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎加入银河系农场。欢迎各农场兄弟姐妹们坐客串门，欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
-![](https://assets.gnews.org/wp-content/uploads/2021/12/345-1.jpg) 
+当卡车司机接管加拿大首都渥太华并关闭通往美国的边境入境点时，一些人称其为“全国性起义”。民主世界各地都发生了大规模示威游行。人们已经受够了两年的授权和其他疾病控制措施。
+
+在世界上人口最多的州，情况并非如此，该州保持着世界上最严格的 COVID-19 控制。众所周知，中华人民共和国境内没有针对抗冠状病毒努力的民众抗议活动。
+
+然而，中国并不稳定，正如反对派人士最近发表的一篇文章（见下文）所说，习近平正面临着他的“末日”。
+
+起义不是在整个社会，而是在共产党的高层。
+
+正如国际战略研究协会会长格雷戈里·科普利（Gregory Copley）告诉盖茨通（Gatestone）的那样，中国看起来威武的领导人习近平有“大量的国内敌人”。
+
+习近平制造了这种反对意见。在 2012 年底成为中国的统治者后，他从其他人手中攫取了权力，然后在清洗中监禁了数万名反对者，他称之为“反腐败”运动。
+
+习近平还利用这次Covid-19病毒发挥了很大的作用。正如《国防与外交战略政策》主编科普利所指出的，“习近平的‘零新冠病毒’政策实际上与其说是为了阻止新冠病毒的传播，不如说是为了压制他的内部敌人，无论是在公开和党内。”
+
+“大阵”现在开始反击。习近平在处理该国停滞不前的经济时最为脆弱。一方面，针对 COVID 的严厉运动——大规模检测、细致的接触者追踪、严格的封锁——当然削弱了消费，而消费是北京吹捧的经济核心。
+
+北京正惊慌失措，上个月新增信贷总额近万亿美元，创历史新高。中国的技术专家也变得狡猾，开始采用广为人知的环球资源合伙人安德鲁·科利尔（Andrew Collier）所说的“影子刺激”——由地方政府及其实体提供的刺激，以使中央政府能够避免报告支出。
+
+中国需要一个充满活力的经济来偿还巨额债务，这主要是因为北京过度刺激经济，特别是从 2008 年开始。如果包括所谓的“隐性债务”，该国的总债务接近 350%国内生产总值。
+
+毫不奇怪，中国公司现在正在违约。债务危机如此严重，它可以拖垮中国的经济——以及国家的金融和政治体系。
+
+（未完待续）
+
+信息来源：[Will Xi Jinping’s “End Of Days” Plunge China & The World Into War?](https://www.zerohedge.com/geopolitical/will-xi-jinpings-end-days-plunge-china-world-war)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
