--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,11 +1,31 @@
 ---
-title: MRNA就是刺突蛋白
+title: 欧盟“全球门户”投资计划联手非盟对抗中共&#8221;一带一路&#8221;
 ---
-`新西兰农场【光影传镜】` [轉載自GNews](https://gnews.org/zh-hans/2036011/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036268/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/0107-02.png.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/0107-01.png.jpeg)![](https://assets.gnews.org/wp-content/uploads/2022/02/0107-03.png.jpeg)
-图文设计：新西兰农场设计组
-上 传：F
+**作者:  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/02/3-64.jpg)
+欧盟和非盟(AU)第六次峰会2月18日在布鲁塞尔闭幕，双方签署“更新伙伴关系”。（图片来自网络）
+
+欧盟近日在与非盟的第六次峰会上承诺启动1500亿欧元的“全球门户”投资计划，以对抗中共的“一带一路”倡议。
+
+据《阿波罗新闻网》2月20日报道，欧洲联盟和非洲联盟（AU）第六次峰会于2月18日在布鲁塞尔闭幕，双方签署了“更新的伙伴关系”。欧盟领导人表示希望与非洲国家重新接触，加强和调整欧洲和非洲国家之间的经济和战略伙伴关系。
+
+欧盟承诺特别启动一项1500亿欧元的 “全球门户”（Global Gateway）投资计划，而这一投资战略主要是为对抗中共的“一带一路”倡议。
+
+非盟主席、塞内加尔总统萨勒（Macky Sall）表示，欧非双方在地理、历史认识、人道关系以及尊重主权等平等关系的共同愿景之下建立合作，旨在巩固团结、安全、和平、可持续经济发展的新伙伴关系。
+
+欧盟执行委员会主席冯德莱恩（Ursula von der Leyen）则强调，欧洲是非洲第一大贸易伙伴，也是第一大投资伙伴。欧盟将继续致力于维持与非洲的可信任经济伙伴关系。非洲也是欧盟战略大投资全球门户投资计划的第一个区域受益者，欧盟与非洲的”全球门户“投资计划将超过一千五百亿欧元。
+
+据悉，1500亿欧元将承担帮助非洲人实现其想要的项目，并优先考虑交通基础设施、数字化转型、可再生能源、教育等。冯德莱恩表示，“全球门户”倡议植根于欧洲和非洲所承诺的价值观，如透明度、可持续性、善治，以及对人民福祉的关注。
+
+除此之外，欧盟还表示将致力于帮助非洲军队执行和平任务和行动，并为他们提供培训以及加强设备和能力。
+
+新闻链接：
+
+[https://www.aboluowang.com/2022/0220/1711021.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0220/1711021.html?utm_source=dlvr.it&amp;utm_medium=twitter)
+
+* * *
 
  
 
