--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,32 +1,23 @@
 ---
-title: 欧盟“全球门户”投资计划联手非盟对抗中共&#8221;一带一路&#8221;
+title: 北京冬奥耗资惊人 何言“简约奥运”
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036268/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2036499/)
 
-**作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3-64.jpg)
-欧盟和非盟(AU)第六次峰会2月18日在布鲁塞尔闭幕，双方签署“更新伙伴关系”。（图片来自网络）
+撰稿：东京樱花团｜麗子
+![](https://lh3.googleusercontent.com/qiR7gI4S6ivz44sOFJXGdOozzSWdIBrGBlY5Th92TQCua6AtWpPIumBpMnMM-rmGjaT2hDBGhdqd-tCWek4zga3zqwst9DL98Xi4eWOnAqwOPnLLMFn5GI0d5ajI-ODKsw72txcK)[*图片来源*](https://www.asahi.com/sp/articles/ASQ235S7FQ23UHBI013.html)
+中共国承诺以“低成本、高效率”举办2022年北京冬奥会，但相关人士指出，冬奥会的实际成本是原计划的五倍多。据《华尔街日报》（WSJ）当地时间19日报道，根据对政府采购公告、施工记录以及相关部委和地方政府的公开文件进行的综合分析，中共政府在奥运会上至少花费160亿美元。
 
-欧盟近日在与非盟的第六次峰会上承诺启动1500亿欧元的“全球门户”投资计划，以对抗中共的“一带一路”倡议。
+北京冬奥组委会一直在强调习近平提到的“简约，安全，精彩的奥运盛会”。中共在2014年申办奥运会时曾向国际奥委会（IOC）表明，成本将控制在39亿美元，费用远远低于历史上任何一届冬季奥运会。并且，2008年夏季奥运会的设施还可再利用，因而赢得了2022冬奥会主办权。实际在本届冬奥会上只重复使用了五个设施，至少有 10 个设施属于新建。《华尔街日报》估计，仅与冬奥会设施相关的超额支出就将超过 8 亿美元。此外，北京市和社会资本已投资 23 亿美元用于新建或改造设施。此次支出远远超过其预算，因为间接成本自始至终没有包含在内。
 
-据《阿波罗新闻网》2月20日报道，欧洲联盟和非洲联盟（AU）第六次峰会于2月18日在布鲁塞尔闭幕，双方签署了“更新的伙伴关系”。欧盟领导人表示希望与非洲国家重新接触，加强和调整欧洲和非洲国家之间的经济和战略伙伴关系。
+中共国还花费120亿美元在北京和河北省张家口之间修建高铁和高速公路，间接费用总额超过130亿美元。此外，仅针对中共病毒蔓延的防疫措施就产生了至少 6800 万美元的意外成本。并且原本预计超过 1 亿美元的比赛门票销售也无法实现，结果“成就”了滚雪球般成本高昂的北京冬奥。
 
-欧盟承诺特别启动一项1500亿欧元的 “全球门户”（Global Gateway）投资计划，而这一投资战略主要是为对抗中共的“一带一路”倡议。
+羊毛出在羊身上，中共独裁政府所花费的一分一厘均来自民脂民膏。再加上普京高额出场费，成本又何止160亿美元！为了习大神一己私欲，苦了数十亿中国同胞，悲哉！
 
-非盟主席、塞内加尔总统萨勒（Macky Sall）表示，欧非双方在地理、历史认识、人道关系以及尊重主权等平等关系的共同愿景之下建立合作，旨在巩固团结、安全、和平、可持续经济发展的新伙伴关系。
+信息来源：[**北京冬季五輪でかかった費用160億ドル…中国の計画より5倍も差がある理由は？**](https://news.yahoo.co.jp/articles/f1dbb016b626b2fe605531f7116da455341638ec)
 
-欧盟执行委员会主席冯德莱恩（Ursula von der Leyen）则强调，欧洲是非洲第一大贸易伙伴，也是第一大投资伙伴。欧盟将继续致力于维持与非洲的可信任经济伙伴关系。非洲也是欧盟战略大投资全球门户投资计划的第一个区域受益者，欧盟与非洲的”全球门户“投资计划将超过一千五百亿欧元。
-
-据悉，1500亿欧元将承担帮助非洲人实现其想要的项目，并优先考虑交通基础设施、数字化转型、可再生能源、教育等。冯德莱恩表示，“全球门户”倡议植根于欧洲和非洲所承诺的价值观，如透明度、可持续性、善治，以及对人民福祉的关注。
-
-除此之外，欧盟还表示将致力于帮助非洲军队执行和平任务和行动，并为他们提供培训以及加强设备和能力。
-
-新闻链接：
-
-[https://www.aboluowang.com/2022/0220/1711021.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0220/1711021.html?utm_source=dlvr.it&amp;utm_medium=twitter)
-
-* * *
-
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
