--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,34 +1,21 @@
 ---
-title: 中共军舰用激光照射澳洲巡逻机 此军事行为或危及生命
+title: 白金汉宫证实：女王今天中共病毒检测呈阳性
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036255/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2036417/)
 
-**作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/02/5-39.jpg)
-图为 P-8A资料图（图片来自网络）
+撰稿：东京樱花团｜asket
+![](https://lh5.googleusercontent.com/DpjwIreeyDWwlTtpndE-lPjS-nvO9y05TFJJUzd-Zvtkjsv1dxFpL2__mx-XMJnTt2B7Cu_rXS6lFUwbQVreG6hMmVH_rVbnpFB8JFy_S3wiXM7BBeMUkpXj_pWlMF6LC6uMoVtS)[*图片来源*](https://www.bbc.com/news/uk-60453566)
+白金汉宫证实，英国女王伊丽莎白今天的中共病毒（Covid）检测呈阳性。
 
-澳大利亚的一架海上巡逻机日前在飞行时遭到激光照射攻击。据探测，该激光来自一艘中共的海军军舰。
+女王陛下正经历着轻微的类似感冒的症状，但预计在未来一周内将继续在温莎进行轻微的工作。
 
-据《大纪元》2月19日报道，澳大利亚一架P-8A“波塞冬”（Poseidon）海上巡逻机在本国北部海域飞行时，遭到来自一艘中共军舰的明晃晃的激光照射攻击。澳大利亚国防部在一份声明中表示，“用激光照射飞机是严重的安全事件，该行为有可能危及生命” 。强烈谴责这种“不专业及不安全的军事行为”。
+她将继续接受医疗照顾，并将遵循所有适当的准则。
 
-澳洲国防部进一步指出，事件发生时，该艘中共军舰正与另一艘中共军舰一起经过阿拉弗拉海（Arafura Sea）向东航行。
+信息来源：[**Queen tests positive for Covid, Buckingham Palace announces**](https://www.telegraph.co.uk/royal-family/2022/02/20/queen-tests-positive-covid/)
 
-此前，澳洲军机也曾遭到过来自中共国的激光袭击。澳大利亚广播公司（ABC）的一份报告显示，2019年，澳洲飞行员在南海上空进行军事演习时，曾遭遇中共海上民兵发射的一系列激光攻击，致使飞行员被迫在军舰上降落，并接受体检。
-
-除了澳洲之外，美国军机也同样多次遭到过中共国的激光攻击。2020年2月17日，一艘中共海军驱逐舰向正在国际水域上空飞行的美国海军P-8A“波塞冬”海上巡逻机进行激光照射。美国太平洋舰队当时也同样表示，这种行为“不专业、不安全”。
-
-据了解，当时那架美军P-8A巡逻机上的传感器检测到中共驱逐舰使用的是肉眼看不见的激光，而武器级激光有可能对服役军人造成严重伤害，并可能损坏各种船舶和飞机系统。
-
-此外，在2018年5月，美国五角大楼官员还曾披露，中共驻非洲吉布提军事人员使用高功率激光束瞄准美国飞行员，导致两名美国飞行员受轻伤。
-
-中共屡次用激光作为武器对外国军机做出一系列的危险行为，恐怕已不仅仅只是“不专业、不安全”这么简单了，这完全是充满挑衅、极其危险的攻击性军事行为。然而，如此令人发指的恐怖主义行为一而再、再而三的发生，美欧国家竟然无法有效制止，中共反而变本加厉，这让人感到不可思议。
-
-新闻链接：
-
-[https://www.epochtimes.com/gb/22/2/19/n13589593.htm](https://www.epochtimes.com/gb/22/2/19/n13589593.htm)
-
-* * *
-
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
