--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,83 +1,53 @@
 ---
-title: 我们必须为保护孩子们对邪恶说不（二）
+title: 中共CCP充分暴露无能无耻与流氓的邪恶本质
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2036160/)
+`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/2036402/)
 
-**编译：The world，weiwei**
+作者：加拿大温哥华扬帆农场 動物農莊裡的小螞蟻[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)（专栏） Gettr: [@Michael\_tonny89](https://gettr.com/user/michael_tonny89)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip我们必须为保护孩子们对邪恶说不（一）-1.png)图片来源：banned.video
+![](https://assets.gnews.org/wp-content/uploads/2021/12/michael-4.jpg)
 
-【接上篇：**我们必须为保护孩子们对邪恶说不（一）】**
+本月16日，中共外交部发言人汪文斌在回答《环球时报》记者的提问“美国和加拿大分别就加发表《反对在国家关系中使用任意拘押宣言》一周年发表声明。中方对此有何评论？”时，完全没有对记者提问的正面回应，而是直接攻击美国，称美国宣布将本属于阿富汗人民的资产据为己有；加美才是任意拘押问题的典型代表；无论是在任意拘押还是侵犯发展中国家人权方面，美加都有很多令世人哗然的不光彩记录；美加多将精力用到改正自身包括任意拘押在内的各种违反国际规则、侵犯人权的劣行上来。
 
-首先是《今日美国》，还有雅虎新闻，到处都是与联合国有关的团体要废除家庭，他们是种族主义者。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/404museum-iShot2020-07-3110.18.14.jpg)
 
-让国家在公共设施中对儿童进行抚养吧，这就是大重置。也就是新共产主义。你得去看看我们在周日节目上关于这个的视频。
+简直是答非所问！这和那个问答“你平时在家打老婆吗?”回答是“你家祖上也曾经打老婆” 差不多。充分体现CCP的无能、狡辩、无赖、无耻与流氓！
 
-这里有一个专栏，加州应该以公平的名义，以平等的名义废除父母的权利，他们就是这么说的。这是对人类的破坏正在进行时。
+《反对在国与国关系中任意拘押宣言》(Declaration Against Arbitrary Detention in State-to-State Relations)是由加拿大发起，去年2月15日由加拿大、美国、英国、日本和澳大利亚在内的共计58个国家的外长共同签署的宣言，反对一些国家把拘押外国公民当作外交筹码。到今年1月24日，又有包含菲律宾、巴哈马等另外10个国家加入。全世界主要发达国家都加入了这一宣言。
 
-就像新冠的疫苗正在导致金融崩溃，他们解雇了所有这些聪明的人，因为们不愿意使用疫苗，或者因为他们使用了第一针疫苗后生病了，所以，他们不希望打第二针或第三针。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/arbitrary_detention-detention_arbitraire-banner.png)
 
-你生病了，他们让你去打加强剂，不然就把你给解雇了。哦，事情开始崩溃得太厉害了，这就是他们的计划。所以我今天想明白了。
+《宣言》本身不针对任何国家，禁止任意逮捕或拘留外国国民以强迫采取行动或对外国政府施加影响，本身就是违反国际法，破坏国际关系，对在国外旅行、工作和生活的外国国民造成严重的负面影响。
 
-他们说诺瓦克-德约科维奇在被澳大利亚驱逐出境后回到了塞尔维亚的贝尔格莱德。而所有的报道都像我今天早上三、四点钟看了的一样。都说他活该，因为他是个麻烦制造者，不愿意接受那肮脏的疫苗。现在另一个人拿到冠军了，那人是个¨好孩子。¨
+该宣言旨在通过对人权、领事关系、法治和司法独立等核心原则的一致承诺，保护在国外生活、工作和旅行的所有国家的公民。这些是普遍价值，牢固地植根于国际法。该宣言旨在提高认识并制止任意拘留的做法。宣言呼吁所有国家采取具体步骤，防止和制止拘留条件恶劣，不准接触接触法律顾问，折磨，或其他对被抵押人进行残忍、不人道或有辱人格的待遇或处罚。
 
-比赛继续进行，让我们制造更多这样的事件。体育界人士和其他人会开始说不！他们不会成为系统中的奴隶。
+遵循国际法处理国际关系，是国际社会的一项基本原则。
 
-我们需要更多像德约科维奇这样的人。我们需要一个德约科维奇奖，因为他做了正确的事情，说了不！ 他可是连续九次赢得冠军。
+汪文斌奉劝“这68国多将精力用到改正自身包括任意拘押在内的各种违反国际规则、侵犯人权的劣行上来”，等于直接承认加拿大人康明凯（Michael Kovrig）和麦克·斯帕佛（Michael Spavor）被CCP当作外交人质。
 
-现在法国也说他不能来参加下一次活动。很好，我们需要更多的网球运动员去反抗，去说不！
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Snipaste_2022-02-20_20-41-43.png)
 
-约科维奇可以用假的疫苗文件，说他打疫苗了，但他没有这样做。而国家橄榄球联盟，他们就是这么干的，这就是为什么他们都没事。  在欧洲，人们排着队，听从命令，打疫苗。
+美国国务卿布林肯在谈到《反对在国家关系中使用任意拘押宣言》一周年时说，一年前，美国和志同道合的国家明确表示反对任何国家拘留外国人，这种做法必须停止。目前，这一宣言得到了全球68个国家的支持，美国敦促其他国家支持这一倡议。
 
-在纽约的福特汉姆大学，提出新的新冠限制条例禁止学生喝水。邪教总是有一些新仪式需要你去完成。就像你不能直视别人的眼睛。
+尽管地球人都知道，只有中共国、北韩、伊朗，才会任意拘留外国人，把外国人当人质，但布林肯的回答非常得体。没有一个正常人会允许中共的人质外交，更不会有人能接受这种无厘头的攻击。汪文斌直接攻击美国的做法，显然会招致全世界对CCP更加反感。
 
-CDC建议取消橄榄球，并在几乎所有的美国学校禁止橄榄球，这被称为不现实的，这一切都只是在制造恐惧。你需要维生素和矿物质，这样你才能健康。
+这样的回答，也充分暴露了CCP的无能！有人说，邓小平的“伟大之处”在于对内不折腾，对外有谋略。CCP外交部目前这帮东西，充分暴露了“有勇无谋”，无能的本质。共惨党除了欺压百姓，在处理国际关系中，毫无智慧，连同是轴心国的俄罗斯、北韩、阿富汗塔利班，都完全靠金钱收买。
 
-兰德-保罗现在想知道，如果CDC承认棉布口罩没有用，会给你带来细菌、肺炎，YouTube 是否会拍我的马屁给我道歉？！
+任意拘禁是令人无法接受的行为，无论CCP如何无赖、无耻与流氓，都将被人类彻底消灭！
 
-而且戴口罩可能比不戴口罩更容易传播新冠或任何其他疾病，因为它让颗粒物在口罩和水泡中堆积结块，然后气溶胶化。
+参考数据：
 
-大型新研究出来了，疾病预防控制中心被迫说口罩没有任何作用。但你认为强制戴口罩会停止吗？这是他们的Binky，这是他们的Baba，这就是他们的吉格利。
+[Arbitrary detention in state-to-state relations](https://www.international.gc.ca/world-monde/issues_development-enjeux_developpement/human_rights-droits_homme/arbitrary_detention-detention_arbitraire.aspx?lang=eng#a3)
 
-那是他们的小被子，是我们的孩子们为他们盖的被子起的名字。Gligly、Binkie和Baba。
+[2022年2月16日外交部发言人汪文斌主持例行记者会](https://www.mfa.gov.cn/web/fyrbt_673021/202202/t20220216_10642776.shtml)
 
-我四岁的孩子把他的被子叫吉格利，我想说的是，这些口罩就是他们的吉格利。女士们，先生们，这太荒谬了，现在我们正在用这些东西折磨我们的孩子。
+[Launch of Declaration Against Arbitrary Detention in State-to-State Relations](https://www.canada.ca/en/global-affairs/news/2021/02/launch-of-declaration-against-arbitrary-detention-in-state-to-state-relations.html)
 
-我在奥斯汀的一家商店里看到了这个被出售的东西，Little Buddies by Fiesta Plush mask，你的口罩小兄弟。在你不注意的时候，这就是如何让小孩学会被奴役的口罩。平均而言，普通口罩降低氧气吸入达20%，增加了二氧化碳中毒的可能性。
+[58国签署宣言 反对任意拘押外国人](https://www.voachinese.com/a/Canada-leads-58-countries-plus-EU-launching-initiative-to-stop-arbitrary-detentions-by-governments-20210215/5779164.html)
 
-我想，律师们在后面写了什么。  果然，重要的内容都在后面，上面写着：如何使用和保养你的小伙伴口罩。
+[On the 1st anniversary of the “Declaration against Arbitrary Detention”, the United States and Canada continue to concoct lies, and China’s counterattack is amazing](https://inf.news/en/world/182f422fd9b016c57e3fef010239b7f5.html)
 
-如果你在佩戴你的小伙伴口罩时出现呼吸困难，请立即将其取下。哦，好吧，我们有呼吸困难，不要戴着你的小伙伴口罩睡觉，因为它可以杀死你。
-
-12.99美元，你还不如叫它教父里面的小伙伴，就像主角在哈瓦那的医院里用毯子或枕头将别人窒息谋杀的地方，这上面有过滤器，然后上面有所有这些其他布料。
-
-因此，你可怜的孩子实际上是在和他们的小伙伴口罩一起喘息着度过这一切，让我看看我是否能和小伙伴一起在这里呼吸。
-
-我已经被绑架了，就像患上了幽闭恐惧症。邪教的计划只想要系统性的虐待我们的孩子，真是可恶的东西！
-
-这个系统是由一群有恋童癖、崇拜魔鬼的人渣管理的，他们坐在那里告诉你把这个厚重的东西放在孩子的脸上。
-
-他们迫使你承认我们是一种疾病，我们是肮脏的，我们是坏的，我们必须沉默，必须按照他们说的去做。
-
-但是，我要告诉你，如果你觉得不舒服，就把它从我们的小伙伴身上拿下来。睡觉的时候不要带着它，否则小伙伴可能就会回不来了。
-
-所以，我们必须要为保护我们的孩子而站出来说不！因为，他们正在指望着我们。
-
-说明：
-
-“本文章取材于亚历克斯-琼斯，亚历克斯-琼斯是著名的信息战争网站的创始人和主持人。在2018年遭到所有主流社交平台的封杀。现在仍然活跃在反对疫苗的前线”
-
-**新闻来源**：[banned.video][The Mass Formation Psychosis Push to Suffocate our Children and End Humanity Exposed](https://www.banned.video/watch?id=61e5f06faf1fcf7b54eb98b1)
-
-* * *
-
-***审核：阿伯塔
-校对：花羽
-发布：信心满满***
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
-
-
+編輯：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)上傳：[Michael.Tonny](https://gnews.org/zh-hans/author/michaeltonny/)
 
  
 
