--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,63 +1,24 @@
 ---
-title: 我们必须为保护孩子们对邪恶说不（一）
+title: 视频&#124;NBA球星坎特透漏被提名诺贝尔和平奖
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2036125/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2036340/)
 
-**编译：The world，weiwei**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip我们必须为保护孩子们对邪恶说不（一）.png)图片 来源：banned.video
-我不想提醒你，但是这些疫苗会降低你的免疫系统，并导致大量的心脏问题和血凝块。提醒你的是一位科学家，是世界上最顶尖的人，mRNA的发明者，辉瑞公司前首席科学家，欧盟咨询委员会的负责人。
+制作：香草山视频部
 
-到目前为止，他们都说，在早期将会看到心脏病和血栓的发病，以及自我免疫力的降低，然后会看到癌症和死亡。
+2月17日，NBA球星欧尼斯·坎特·自由在推特上发布消息表示，能获得诺贝尔和平奖提名，他感到既荣幸又受宠若惊。他说，有时候表明立场比领到下一份薪资更重要。
 
-获得法国诺贝尔奖的艾滋病毒的发现者说，他认为使用这种毒疫苗的一半人将在六年内死亡。
+据美国媒体报道，日前被NBA球队放弃的坎特，得到30位诺贝尔奖得主联署力挺，他也因此被提名诺贝尔和平奖。
 
-我知道邪恶会降临，但现在我们真的在邪恶里，很难让人接受。我告诉军队和官僚机构中的你们每一个人，我不是在寻求与你们做斗争，因为我也有家人在军队里打了疫苗， 他们中的一个人真的病了，另一个则完全没有感觉。而这是因为他们在做奇怪的测试？！
+坎特是波士顿凯尔特人队的前中锋，他是直言批评中共政府为犯下反人类罪的残暴组织，为中国人权发声的少数国际顶级运动员之一。
 
-他们承认有些团体的疫苗里使用盐水，他们在做测试，在观察这些团体的情况。他们都有一个ID，一个联邦、全球、联合国的ID，关于谁打了疫苗，谁没有？因此，你可能打了突变性的注射，而下一个人可能打的是盐水。
+2021年11月23日，坎特在接受福克斯新闻采访时，曾敦促国际奥委会放弃2022年北京举行冬奥会。他说，即使大部分职业体育界都对中共侵犯人权、对中共领导层的指控保持沉默，也总得有人站出来与中共对抗。
 
-我有这么多的新闻要报道。我只想说，他们想让我们自己互相争吵，让我感到我和其他人一样有罪。
+发稿：林礼
 
-我们必须一起超越这一点，摆脱愚蠢的辩论。左派理应受到批评和攻击，但数十万有影响力的人正在获得数十亿美元的报酬。
-
-他们现在承认只是在去年一年，辉瑞就支付了大约100亿。想象一下他们现在花了多少钱，加上前年的不只是100亿。然后一旦他们已经注射了70%的公众，他们就会告诉你，哦，对不起，这种疫苗降低了你的免疫力，你必须使用疫苗加强剂。
-
-哦，顶级科学家们在20个月前是怎么告诉我们的？  他们都签署了保密协议，他们都参与了其中，他们都参与了这些在德克萨斯大学和在伦敦及蒙特利尔的大型设施中失败的项目。
-
-所有这些工程都在过去20年中失败了。而比尔-盖茨挑选了一个失败的项目卖给你。你知道这是为什么吗？因为它失败了，因为它伤害了所有的实验动物，并杀死了其中的大多数。当然，他们还在中国做了秘密的人体试验，这已经被曝光了。
-
-他们采取了一个失败的计划，因为如果你把它用于想法的目标，它就不是失败的作品了。所以我们看到的是一个正在进行的灭绝计划，你可以玩游戏，但你真的想成为一个司法部的人吗？
-
-他们看了你的身份证件，给你打了盐水，给其他人都打了致癌的疫苗。这真的是你想成为的人吗？
-
-邪恶正在进行。欧洲高级政府部门的举报人出来说，这些疫苗箱子进来的时候，标签贴在主要的大箱子上，而不是在单个的小瓶上，他贴在主要箱子上。
-
-把这个箱子交给这个小组，把这个疫苗交给持有那些数字的人。这是新闻已经报道过的，为什么美国和欧洲有些人说我们不知道为什么，他们已经确认它药剂师和有关的人，我们看着电脑，电脑在告诉我们，你是一个白人女士，我们给你打这个疫苗。哦，你是一个黑人，我们给你打另外这个疫苗。我们还没有弄清楚到底是怎么回事。但我真的很害怕用他们的文件来告诉你这到底是为什么。
-
-如果它真的是疫苗，那它给每个人都应该是一样的该死的东西。然而不是，这就是为什么他们一直在给人不同的待遇，给人们注射盐水或打疫苗，给他们一些不同的东西，因为这是一个巨大的实验，我不确定它到底是什么，但我们知道它的副作用正在杀死一群人。
-
-我们知道科学家们说，这种疫苗的作用是使你身体的每一个部分都发生变异，特别是快速生长的细胞，它们具有与病毒相同的蛋白质。
-
-这就是为什么如果你处于辐射危机时，你的肠子和你的牙龈以及你的粘膜他们是生长最快的细胞，于是它们很快瓦解和死亡。因为辐射对它们的影响最大，像你的眼角膜和不繁殖的东西及不繁殖的脑细胞。
-
-因此他们在研究中已经发现，你的身体状况越好，情况就越糟糕，因为病毒习惯于被卷入脂肪当中。
-
-它想生活在脂肪中，但是，如果你没有任何脂肪，如果你只有3%是脂肪，如果你是一个顶级足球运动员或顶级跑步者，疫苗就会穿过你的身体，繁殖并接管你的整个身体，你就会没命了。
-
-说明：
-
-“本文章取材于亚历克斯-琼斯，亚历克斯-琼斯是著名的信息战争网站创始人和主持人。在2018年遭到所有主流社交平台的封杀。现在仍然活跃在反对疫苗的前线”
-
-【接下篇：**[我们必须为保护孩子们对邪恶说不（二）](https://gnews.org/zh-hans/2036160/)】**
-
-**新闻来源**：[banned.video][The Mass Formation Psychosis Push to Suffocate our Children and End Humanity Exposed](https://www.banned.video/watch?id=61e5f06faf1fcf7b54eb98b1)
-
-* * *
-
-***审核：阿伯塔
-校对：花羽
-发布：信心满满***
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
  
 
