--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,65 +1,27 @@
 ---
-title: 加拿大卡车司机的抗议游行是对专制者说不（二）
+title: 秘翻在线：日媒报道说中共国老百姓的肉体冻出了奥运蓝
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2036079/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036339/)
 
-**编译：The world ，weiwei**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip加拿大卡车司机的抗议游行是对专制者说不（一）-1.png)图片来源：youtube.com
-【接上篇：[加拿大卡车司机的抗议游行是对专制者说不（一）](https://gnews.org/zh-hans/2036056/)】
+撰稿：待命（文暁）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/画像1-28.png)（图片源自本文链接）
+2月20日Q电视新闻消息：臭名昭著的北京严重污染的空气被奥运会期间的蓝天掩盖了。为了实现这一 “奥运蓝”，中共国政府进行了精心的准备，并采取了防止空气污染的措施。 然而，在一些地区，人们被下令不许烧木材，因为这会污染空气，一些市民不得不忍受寒冷。我们采访了这一实况。
 
-你在加拿大也看到了这一点。加拿大副总理克里斯蒂亚-弗里兰对她现在有能力关闭这些卡车司机的银行账户，冻结他们的资产，并从普通工人阶级手中夺取资产，而他们只是不想服用一种实验性药物的疫苗。 她要关闭他们的账户，她要拿走他们工作挣来的所有资产，而且她对此再高兴不过了。
+之前很担心能否会有蔚蓝天空，但最后整个奥运期间，除了下雪的那几天，天空都是蓝色的。
 
-记者问一直在傻笑的加拿大副总理克里斯蒂亚-弗里兰：“你确认账户已被冻结，包括个人和公司账户，但你没有公布信息。 而实际的后续工作会是怎样？我只是想知道向 ” Gift Send Go “和 “Go Fund Me “活动捐款的个人的银行账户是否会成为目标，他们是否被认为是《紧急状态法》下的指定人群，这是不是意味着他们的信用卡和金融服务可能会被取消。“
+蔚蓝的天空是奥运会很好的点缀，吸引了来自世界各地的关注。但同时，为实现 “奥运蓝 “而采取的一些措施被批评为 “太过分了”。
 
-克里斯蒂亚-弗里兰回答道：“个人和实体的名字，以及加密货币钱包已经被加拿大皇家骑警与金融机构共享，很多账户已经被冻结，更多的账户将被冻结。”
+自去年11月以来，在毗邻北京的河北省山海关地区，当地政府陆续将居民的 “炉灶”封起来。 当我们访问该地区时，发现许多居民家里的”炉灶”被用混凝土或类似橡胶的材料封住，使其无法使用。特别是在中共国的东北乡下，这些”炉灶 “也被用作采暖，所以许多居民不得不忍受寒冷。
 
-当她回答完这个问题后，我们可以听到她在哈哈大笑。那些卡车司机，我们已经完全拿走了他们的钱。
+一位80多岁的老人同意了接受我们的采访。寒冷的天气里，即使在他家室内也不到10摄氏度，他的孙子裹着被子在学习。老人一脸无奈地说：如果我们不服从政府的命令，会招来大麻烦，我们没办法。
 
-我们正在与金融机构分享他们。  也许你不应该质疑政府，也许你不应该提出抗议。因为她醉心于权力！福奇醉心于权力！特鲁多醉心于权力！
+至于他们为什么要封住”炉灶”？据中共国媒体报道，该地区已被指定为 “国家空气质量监测点”，禁止百姓烧木材，是当地政府为改善当地的环境数据，而采取的措施。倒是给他们发放了电暖器作为取暖设备，但接受采访的居民一致抱怨根本起不到取暖的作用。
 
-官僚机构和民选政府中的统治阶层，他们醉心于权力，但这并不是故事的全部。现在很多左派都在说，你们保守派，如果是黑命贵和安提法组织关闭了街道，你们对卡车司机的抗议就会有非常不同的看法。言外之意是说，假如你反对黑命贵的暴动，可首先这根本不是暴动，因为卡车司机又不是在烧毁大楼，抢劫，偷耐克运动鞋，闯入高档商店。
+其它几个省也采取了类似的封 “炉灶”措施。可我们却看到了中共国媒体不同寻常的指出：环境保护很重要，但我们不能只追求不冒烟而让群众挨冻。
 
-但是，左派只从外表的形式强词夺理。所以，如果你反对黑命贵关闭高速公路，黑命贵关闭街道，那么你支持卡车司机车队就是虚伪的、不合法的、要受惩罚的。因为是黑命贵做的，你会讨厌它；是卡车司机做的，你会喜欢它。
+为了所谓的业绩，不惜牺牲人民群众，这在中共国已经司空见惯，甚至老百姓都已失去了反抗的本能。中共捂着盖着的家丑，还是被日本媒体给爆出来了，其状况该有多严重了，不言而喻！
 
-一些保守派现在正试图从这一点出发，说这是原则性的、程序性的问题，不能单从看黑命贵和安提法的人关闭了街道的形式和加拿大的卡车司机关闭街道的形式是否一样，这只能说明左派在混淆视听。
-
-我们先不讨论黑命贵和安提法自制燃烧弹和抢劫高档商店的问题。这两个具体的事件看起来都是一样的抗议活动，但一个是好的，一个是坏的。为什么？ 因为这是本质上的问题。
-
-黑命贵和安提法关闭街道的原因是不公正的，是为了负面的东西。他们想要的是共产党的政府和共产党政府的政策，他们基于错误的前提去游行。
-
-而卡车司机们关闭公路的目的是公正的，是正面的东西。他们不希望政府暂停法治，强迫每个人必须要打这种实验性疫苗，更没有一个强迫人们打针的理由。
-
-在这里，实质内容才是最重要的，而我们并不想经常谈论这个问题。20年来，我们一直停留在合法性，至少在这种程序性的方式上。你甚至可以从我们谈论最高法院的方式，我们谈论法庭案件的方式中听到这一点。
-
-是的，疫苗授权是有先例的，但不是在联邦政府层面，也不是像拜登试图使用这种绕过宪法的方法让职业安全与健康管理局（OSHA）那样去推行。
-
-他也有一些先例，乔治-华盛顿对一些中部的民兵就是这样做的。最高法院100多年前的一个案例说，在地方一级，你可以授权接种疫苗。
-
-但问题是我们现在这种疫苗并没有起到我们被告知的作用，它是用一种全新的疫苗技术创造的，没有长期的数据。
-
-这是一种对抗病毒的疫苗，而这个病毒对大多数人来说并不构成很大的威胁。因此，细节在这里确实很重要。人们正在反抗，你现在就可以在奥地利看到这一点。
-
-奥地利正在对他们所谓的新冠种族隔离政策做一个彻底的180度转变。奥地利联合政府刚刚宣布，该国将停止绝大部分的封锁措施，包括所有新冠种族隔离政策的限制。
-
-奥地利的反对党说政府之前为未接种疫苗的人制定的一套规则和法律将在3月5日之前被废止。 这难道不是奥地利人们坚持反抗政府强制疫苗的胜利吗？！
-
-你必须认识到，整个遵循科学的事情一直是完全虚假的。 这一直是我们的政治统治阶级的宣传，目的是让我们永远这样下去，并永远剥夺我们越来越多的权利和生活方式。
-
-他们要掠夺我们的钱财、他们夺取我们的自由、他们要杀害我们的小狗，不要让他们这样做。就像他们在奥地利所做的那样，站出来说：不！。
-
-【完结】
-
-**新闻来源**：[youtube.com][A Stand Against Puppy Killers And Racists | Ep. 947](https://www.youtube.com/watch?v=0eli2jUGfXA&amp;t=1027s)
-
-* * *
-
-***审核：阿伯塔
-校对：花羽
-发布：信心满满***
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
-
-
+信息源：[北京五輪で続いた青空やりすぎ？大気汚染対策の裏側を取材（日テレNEWS） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/5e47656b69007c1d4bd3cfa917db70ad91f0dfd3?page=1)
 
  
 
