--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,29 +1,24 @@
 ---
-title: 乌克兰科技公司正在做最坏的打算，包括使用加密货币来代替现金
+title: 视频&#124;拉脱维亚教练：北京冬奥委会是场巨大政治秀
 ---
-`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2036036/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2036277/)
 
-素材整理：波士顿五月花Vicky
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-20-at-7.02.06-PM.png)图片来源：**GETTY IMAGES**
-**Nadiya Semen是在线咨询平台JustAnswer在乌克兰的260名员工之一，居住在该国西部边缘的利沃夫。俄罗斯的即将入侵和战争的危险让每个人都很紧张。她已经提取了现金，准备好应急发电机并储存了食物。附近有避难所地图。”我不希望这里有火箭或坦克，但从心理上来说这很难，”她告诉《市场观察》。”目前电力和银行系统已经瘫痪。学校还有炸弹威胁。”**
+製作：香草山視頻部
 
-**“这很紧张，这是很可怕的，”JustAnswer首席执行官安迪-库尔齐格告诉《市场观察》。”这是我的大家庭。我爱他们。”**
+外媒2月19日消息，拉脱维亚两届冬奥委会铜牌得主，目前担任该国国家队教练的马丁斯·鲁本尼斯在受访时表示，本届冬奥会简直是一场“巨大的政治秀”，充分展现了他对本届冬奥主办者中共政权的蔑视与不满。
 
-**随着紧张局势向俄罗斯可能入侵乌克兰的方向升级，像Semen这样的东欧国家的数千名技术员工正在为最坏的情况做准备。与此同时，他们的雇主正在制定应急计划以保护他们。**
+鲁本尼斯告诉媒体：他和选手在抵达中国时，感觉像被当作瘟疫一样对待，但只要有媒体或在公开场所，中共就会无所不用其极地制造假象，展示一场场“你看，这里的一切多么美好”的虚假政治秀。另外鲁本尼斯还透露，很多运动员、教练也都谈论过这个问题。
 
-**WIX，是以色列在乌克兰最大的企业之一，该公司已经将其1000名员工及其家属中的大多数人疏散到土耳其至少两个星期，Wix公司承担了搬家费用。**
+据悉，鲁本尼斯一直是中国人权运动的积极倡导者，在得知有着严重的人权记录的中共再次获得奥运会主办权后，他感到很震惊，并一直在呼吁抵制。而这次来到中共国，他是作为教练来帮助自己的运动队的。
 
-**应用程序制造商Canvas在哈尔科夫的俄罗斯边境附近有大约30名合同员工，该公司首席执行官凯文-斯蒂芬斯说，他们可以选择离开该国一个月，或者暂时搬迁到乌克兰西部。他说，人们的反应不一，一些工人倾向于留在原地，另一些则选择了语言与乌克兰相似的波兰。**
+发稿：小野貓（文凱琳）
 
-**与《市场观察》联系的其他高管一样，库尔齐格表示，由于俄罗斯总统普京的行动日益激进，他多年来一直在制定应急计划。**
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
-**最近几周，库尔齐格向员工提供了搬迁到更安全的西部边境的选择。他已经研究了用加密货币支付他们的工资，因为银行已经被网络攻击而关闭了。在乌克兰国防部和两家银行的在线网络于2月15日被切断后，乌克兰官员指责俄罗斯策划了此次网络事故，拜登政府的一位官员周五指责俄罗斯对银行进行了网络攻击。**
 
-参考链接：[Tech employers in Ukraine are preparing for the worst, including using crypto in lieu of cash](https://www.marketwatch.com/story/tech-employers-in-ukraine-are-preparing-for-the-worst-including-crypto-in-lieu-of-cash-11645285666)
-
-* * *
-
-*编辑&发布：Vicky*
 
  
 
