--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,56 +1,34 @@
 ---
-title: 蒙州总检察长调查GoFundMe关闭自由车队众筹
+title: 中共军舰用激光照射澳洲巡逻机 此军事行为或危及生命
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2036010/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036255/)
 
-翻译：**Lulumi**
+**作者:  **青衣
+![](https://assets.gnews.org/wp-content/uploads/2022/02/5-39.jpg)
+图为 P-8A资料图（图片来自网络）
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1866.png)图片来源：rebelnews.com
+澳大利亚的一架海上巡逻机日前在飞行时遭到激光照射攻击。据探测，该激光来自一艘中共的海军军舰。
 
-蒙大拿州总检察长奥斯丁·克努森正在对GoFundMe进行调查，因为它关闭了为加拿大“自由车队”在渥太华的抗议者进行的近1000万美元的筹款活动。
+据《大纪元》2月19日报道，澳大利亚一架P-8A“波塞冬”（Poseidon）海上巡逻机在本国北部海域飞行时，遭到来自一艘中共军舰的明晃晃的激光照射攻击。澳大利亚国防部在一份声明中表示，“用激光照射飞机是严重的安全事件，该行为有可能危及生命” 。强烈谴责这种“不专业及不安全的军事行为”。
 
-该筹款活动最初是由抗议活动组织者发起的，目的是帮助支付卡车司机在加拿大首都市中心进行的为期三周的抗议活动中所使用的食品、燃料和其他必需品。
+澳洲国防部进一步指出，事件发生时，该艘中共军舰正与另一艘中共军舰一起经过阿拉弗拉海（Arafura Sea）向东航行。
 
-据《每日电讯报》报道，周四，克努森写信给GoFundMe，宣布他调查该众筹平台是否违反了蒙大拿州的《不公平贸易行为和消费者保护法》。该法规保障蒙大拿州居民免受冤屈。
+此前，澳洲军机也曾遭到过来自中共国的激光袭击。澳大利亚广播公司（ABC）的一份报告显示，2019年，澳洲飞行员在南海上空进行军事演习时，曾遭遇中共海上民兵发射的一系列激光攻击，致使飞行员被迫在军舰上降落，并接受体检。
 
-总检察长在对《每日电讯报》的评论中说：“鉴于阿尔伯塔省与我们有共同的边界，这很可能有蒙大拿州的捐助者参与。”我们在蒙大拿州有很多公民是双重国籍，或者在边境两边做生意。对于GoFundMe来说，只是介入并说‘哦，好吧，我们不喜欢这个，我们要扣押这笔钱并把它用于其他方面’，这当然会引起怀疑。”
+除了澳洲之外，美国军机也同样多次遭到过中共国的激光攻击。2020年2月17日，一艘中共海军驱逐舰向正在国际水域上空飞行的美国海军P-8A“波塞冬”海上巡逻机进行激光照射。美国太平洋舰队当时也同样表示，这种行为“不专业、不安全”。
 
-在渥太华市议会提出要求后，GoFundMe于2月初冻结了加拿大抗议活动（的众筹资金），该市议会威胁要对该抗议人群采取全部法律措施。
+据了解，当时那架美军P-8A巡逻机上的传感器检测到中共驱逐舰使用的是肉眼看不见的激光，而武器级激光有可能对服役军人造成严重伤害，并可能损坏各种船舶和飞机系统。
 
-该平台随后表示，它将重新分配资金，但没有向捐赠者提供自动退款，直到社交媒体上的广泛愤怒迫使该公司修改其立场。
+此外，在2018年5月，美国五角大楼官员还曾披露，中共驻非洲吉布提军事人员使用高功率激光束瞄准美国飞行员，导致两名美国飞行员受轻伤。
 
-克努森告诉本刊，他想知道为什么GoFundMe要在未经捐赠者许可的情况下挪用他们的资金，并希望调查该公司过去是否曾这样做。
+中共屡次用激光作为武器对外国军机做出一系列的危险行为，恐怕已不仅仅只是“不专业、不安全”这么简单了，这完全是充满挑衅、极其危险的攻击性军事行为。然而，如此令人发指的恐怖主义行为一而再、再而三的发生，美欧国家竟然无法有效制止，中共反而变本加厉，这让人感到不可思议。
 
-GoFundMe在改变立场之前，本打算把钱捐给一个经该网站核实的团体。
+新闻链接：
 
-在GoFundMe决定冻结众筹并向捐赠者退款后，基督教众筹平台GiveSendGo成为抗议活动组织者事实上的平台，他们也使用比特币和以太坊，以及其他一系列加密货币作为支持抗议活动的替代方式。
-
-加拿大总理贾斯汀·特鲁多的政府此后对与抗议活动有关的30多个加密货币钱包进行了制裁，并命令加拿大金融机构和加密货币交易所“停止为与这些钱包的任何交易提供便利”，作为“与属于紧急措施法范围的非法行为有关”的调查的一部分。
-
-克努森打算调查为什么GoFundMe确定众筹违反了其服务条款，特别是第八条规则，即禁止“仇恨、暴力、骚扰、欺凌、歧视、恐怖主义，或与种族、民族、国籍、宗教信仰、性取向、性别、性别认同、性别表达、严重残疾或疾病有关的任何形式的不容忍。”
-
-“我个人看到的任何情况都没有表明这在任何方面是一个暴力或仇恨的团体，”克努森说。“我在为蒙大拿州的消费者着想。”
-
-总检察长打算查明GoFundMe是如何在渥太华“确定参与者”进行抗议的，以及他们是否以及如何收到他们的资金。
-
-克努森说，他正在调查GoFundMe在最初决定重新分配资金而不是向捐赠者退款后，如何确定“可信的和成熟的慈善机构”。
-
-除了克努森之外，一些共和党立法者和法律官员已经表明他们打算调查GoFundMe，包括佛罗里达州的阿什利·穆迪、路易斯安那州的杰夫·兰德瑞、路易斯安那州的帕特里克·莫里希和德克萨斯州的肯·帕克斯顿等检察长。
-
-共和党参议员泰德·克鲁兹也呼吁联邦贸易委员会调查GoFundMe。
-
-克努森在给GoFundMe的信中提到，该众筹平台是如何允许与2020年Antifa法组织和黑命贵骚乱有关的筹款活动的，并询问“GoFundMe是否与执法部门讨论过这些抗议活动是否包括违反法律或支持暴力或骚扰，以及GoFundMe如何作出决定，允许这些筹款活动留在其网站上。”
-
-“这当然有猫腻，”克努森告诉《每日电讯报》。“这当然看起来像他们在挑选赢家和输家。从贸易惯例的角度来看，我认为这是不公平的。这将是对这些法规的违反。我们发出这封信，要求澄清和提供更多数据。希望他们能给我们一些。”
-
-素材链接：[rebelnews.com] [Montana attorney general launching investigation into GoFundMe for shutting down Freedom Convoy](https://www.rebelnews.com/montana_attorney_general_launching_investigation_into_gofundme_for_shutting_down_freedom_convoy_fundraiser)
+[https://www.epochtimes.com/gb/22/2/19/n13589593.htm](https://www.epochtimes.com/gb/22/2/19/n13589593.htm)
 
 * * *
 
-*审核：文乐
-校对：花羽
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
