--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,36 +1,29 @@
 ---
-title: 欧盟就“禁诉令”再向世贸组织提起对中共国的诉讼
+title: 冬奥今闭幕，中共称数字人民币进入俄罗斯是历史转折
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2036243/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2036415/)
 
-**作者:  **青衣
-![](https://assets.gnews.org/wp-content/uploads/2022/02/3-64.jpg)
-（图片来自网络）
+作者：东京樱花团｜捆绑CCP一千年
+![](https://lh6.googleusercontent.com/vfEmabbzeKggy-Sjz-7bKVK-f5hTo-T9hYk792DwUBO_DopxTmECSoeFvdWsLxTNW_w-F2zinq6ohXvgtUjQdN0D9VbRPxTjfgkzNq_2JBxBTL-KnSJBweJIoUVH8AA9d92hWPIS)[*图片来源*](https://cdn.hk01.com/di/media/images/dw/20210408/456873318444699648475238.jpeg/sZjiTBCKcu-cqP5ymY9_1vmYGPOzUtcIdZbjknWW45I?v=w1920r16_9)
+**数字人民币进入俄罗斯，中共将其称为“一个里程碑事件”的盖棺定论为时尚早。历史将证明，狼狈为奸的结果从来没有赢家，但俄罗斯也许是个例外。习近平将承诺无论数字人民币发生什么意外都不会使俄罗斯的利益受损。**
 
-欧盟2月18日就“禁诉令”再次向世界贸易组织（WTO）提起对中共国的诉讼。这是欧盟在过去3周内对中共国提起的第2起世贸组织诉讼，而上一起是关于中共与立陶宛就涉台问题发生的经贸纠纷。
+据中共国新华社莫斯科19日消息称，“备受瞩目的2022年北京冬奥会即将闭幕，冬奥会期间试点使用数字人民币支付成为一大亮点。俄罗斯专家认为，数字人民币展示中国在金融领域的创新成就，北京冬奥会也将因数字人民币载入史册。”
 
-据《阿波罗新闻网》2月20日报道，欧盟18日向世界贸易组织（WTO）提起对中共国的诉讼。欧盟委员会执行副主席、贸易专员东布罗夫斯基（Valdis Dombrovskis）在声明中强调，启动世贸组织维权诉讼是为保护欧盟充满活力的高科技产业，确保欧盟在研发未来创新技术方面的领先地位。当高科技产业的技术被非法使用时，欧盟公司有权在公正条件下寻求正义。
+所谓冬奥会期间推广数字人民币成为一大亮点的说法纯属虚构，据郭文贵先生1月14日援引中共内部人士透露，“我们可以使用数字人民币，参加冬季奥运会，只有一个前提条件，买我的东西，用美元结算。”这一严苛条件使得中共国数字人民币国际化借冬奥会平台推广宣告失败。
 
-欧盟指出，自2020年8月以来，中共国法院一直在发布所谓“禁诉令”的裁决，对拥有高科技专利的欧盟公司施加压力，阻止这些公司合法保护它们的技术。中共法院还利用重罚的威胁，阻止欧洲公司向外国法院起诉。这使得欧洲高科技公司在争取它们的权利时处于明显的劣势。而中共国制造商已利用这些反诉禁令，从更便宜甚至免费获得欧洲技术中得到利益。
+- ***延展阅读：***[***俄罗斯不禁止加密数字货币，但中国禁止加密货币的流通***](https://plusworld.ru/professionals/kriptovalyuty-v-rossii-kaznit-nelzya-pomilovat-vzglyad-rakib/)
+- ***延展阅读：***[***卡塔索诺夫：数字卢布正在取代现金，但在俄罗斯联邦将14.1万亿美元放在床底下***](https://newizv.ru/article/general/18-02-2022/katasonov-tsifrovoy-rubl-vytesnyaet-nal-no-v-rf-pod-matrasami-hranyat-14-1-trln)
 
-所谓“禁诉令”，指的是禁止当事方在某法院管辖范围之外的其他法庭提起诉讼的司法命令。欧盟称，华为、小米、中兴、奥普（OPPO）等中共国企业利用中共司法当局颁布的跨境“禁诉令”，迫使诸多欧盟企业的相关专利许可费减半。
 
-欧盟在声明中进一步指出，中（共）国严格限制拥有关键技术（如3G、4G和5G）权利的欧盟公司，在它们的专利被诸如中（共）国手机制造商等非法使用或没有适当补偿的情况下，不仅不去保护这些欧盟公司的正当权利，相反，在中（共）国境外诉诸知识产权诉讼的专利持有企业，往往会在中（共）国面临巨额罚款，使这些企业面临压力，被迫以低于市场价格的许可费做出和解。
+该消息援引马斯洛夫的话证实，“数字人民币并不是一种新的（数字）货币，而是中国法定货币的数字版。”尽管[新华社](http://www.news.cn/2022-02/20/c_1211580752.htm)搬出很多俄罗斯所谓专家的话称赞数字人民币，但马斯洛夫的话证明，俄罗斯不承认中共国拥有真正意义上的数字人民币，因为币安已经证明了他的失败。
 
-欧盟委员会还举例说，爱立信、诺基亚等企业如果违反了中共司法当局的跨境“禁诉令”，就可能面临每天13万欧元的罚款，其驻华高管甚至还有可能因此遭到拘捕。
+马斯洛夫话中有话，他证实了郭文贵先生（MILES GUO）的爆料，郭先生说，“冬奥会后俄罗斯会遭遇美国严厉的制裁，到时候俄罗斯国家会启用数字人民币。”（[见 7:26.10 时段](https://gettr.com/streaming/prm988df17)）随着乌克兰一触即发的紧张局势，俄罗斯必将因即将攻打乌克兰遭遇欧美国家全面制裁，当然包括金融制裁。因此，数字人民币正式进入俄罗斯这件事本身就证明普京下定决定要攻打乌克兰了，俄罗斯别无选择，正如郭先生所言，“[事实证明，人类每一次财富转移不发生货币战争，没有一次](https://gettr.com/post/prm988df17)”
 
-欧盟认为，这些做法是中共整体战略的一部分，目的是迫使外国企业以更低的价格向中共国企业转让3G、4G、5G通信技术。
+2022年2月20日
 
-欧盟表示，中共国的这一政策严重损害了欧洲的创新能力和经济增长，剥夺了欧洲企业行使保持其技术领先地位的权利。
-
-这是欧盟在过去3周内对中共国提起的第2起世贸组织诉讼。不久前，欧盟还就中共与立陶宛因涉台问题发生的经贸纠纷，向世贸组织提出了对中共国的诉讼。世贸组织对于这两起诉讼将会做出怎样的判决已成为全世界关注的焦点。
-
-新闻链接：
-
-[https://www.aboluowang.com/2022/0220/1711021.html?utm\_source=dlvr.it&utm\_medium=twitter](https://www.aboluowang.com/2022/0220/1711021.html?utm_source=dlvr.it&amp;utm_medium=twitter)
-
-* * *
-
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
