--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,16 +1,36 @@
 ---
-title: 20220218文贵大直播：新中国联邦人要有利他之心，将代表所有爱好正义的，有信仰的人站在一起
+title: Peterson Pierre医生呼吁治疗冠状病毒不要进医院
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2036128/)
+`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/2036363/)
 
-作者:东京樱花团小视频组
+作者：波士顿五月花   北美教练陪练
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Peterson-Pierre.20220220.jpg)
+Peterson Pierre是美国治疗冠状病毒感染患者的前线医生。在最近发表的视频上，他认为冠状病毒感染患者住院治疗是很危险的事情, 因为美国医院完全遵循CDC、NIH的那套害人的指导方案。患者住院治疗死亡率奇高。病人和家属被医院欺骗，完全被蒙在鼓里。其原因有如下：
 
-校对：东京樱花团视频小组
+1. 根据目前的健康法案，医院急诊室提供冠状病毒检测即可获得政府的资助。每诊断出一个冠状病毒感染患者，医院还会从政府再获得一笔额外的奖金支持。
+2. 在接受国家老年人医疗保险（Medicare）和医疗救助计划 (Medicaid) 的医院，病人的权力被取消。
+3. 每一个冠状病毒感染患者住院治疗，医院还会从政府再获得一笔额外的奖金支持。
+4. 每一个冠状病毒感染患者用瑞德西伟治疗，医院又会从政府再获得一笔额外的奖金支持。
+5. 每一个冠状病毒感染患者用使用呼吸机治疗，医院又会从政府再获得一笔额外的奖金支持。
+6. 无论是否死于冠状病毒感染，只要死亡诊断证明书上写明“冠状病毒感染患者死亡”，每有一个冠状病毒感染患者，医院又会从政府再获得20%的一笔额外奖金支持。
+7. 每个环节，医院都会从政府再有额外的奖金支持。
 
-编辑发布：东京樱花团视频小组
+
+金钱的诱惑太大了！医院简直就像着了魔一样。据估计，每收一个冠状病毒感染患者住院，医院至少获得10万美元的额外奖金。政府简直就是在雇佣医院杀死病人。Peterson Pierre医生向病人疾呼：太危险了！治疗冠状病毒感染，千万不要进医院!
+
+参考视频：
+1、[视频1](https://gettr.com/post/pv4s6tac55)
+2、[视频2](https://americasfrontlinedoctors.org/videos/post/frontline-flashtm-ep-1032-hospitals-no-longer-heal-with-dr-peterson-pierre/)
+3、[视频3](https://americasfrontlinedoctors.org/videos/post/frontline-flashtm-stay-away-from-hospitals-with-dr-peterson-pierre/)
 
 * * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)
+
+*编辑：文合*
+
+*封面：霹雳鼠年*
+
+*发布：吐纳*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
