--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,9 +1,9 @@
 ---
-title: 七哥金句：沼泽地是世界游戏的定义者
+title: 七哥金句：岂能被一只苍蝇撂倒
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2038258/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2038325/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句11--scaled.jpg)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/七哥金句2.001-5.jpeg)
 整理：雅典娜农场
 发布：枫叶红了
 
