--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 真以为绑架不会发生在自己家身上
+title: 普京这次诉求的不是仅仅是乌克兰，而是要彻底拿下欧洲
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2038635/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2038677/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
