--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,7 +1,7 @@
 ---
-title: 中国人忘记灾难是全世界是最快的
+title: 普京身边的人讲了普京从北京回来之后的感受
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2038619/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2038639/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
