--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,7 +1,7 @@
 ---
-title: 习与普无秘书交谈决定他俩的命运
+title: 俄取乌克兰是习普独裁政治利益的需要
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2038688/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2038741/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
