--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,7 +1,7 @@
 ---
-title: 不幸的是战争就这么发生了
+title: 普京整个性情已经大变
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2038927/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2038992/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
