--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 乌克兰就跟当年罗斯福对待二战是一模一样
+title: 战友因为有人诋毁七哥和人打架
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2039049/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2039156/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
