--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,7 +1,7 @@
 ---
-title: 大师给张高丽和中共最高层之一算命
+title: 共产党开启中国互害模式
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2039151/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2039164/)
 
 #### 视频剪辑: WinterGuo ；开智则立 ；0-0 ；rmrf ；Qingjing ；玉米地的小蜗牛 ；牛魔王
 视频定位：BENJ1；WEI
