--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,14 +1,22 @@
 ---
-title: 【谁是郭文贵】第三集——灭共决心
+title: 20220220郭文贵大直播 ：普习早就是生死联盟的关系
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2041560/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2041983/)
 
-第三集主题：灭共决心！
+作者：东京樱花团小视频组
+
+
+
+
+
+
+
+校对：东京樱花团小视频组
+
+编辑发布：东京樱花团小视频组
 
 * * *
-
-发布：文鸣
-
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
