--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 2/20/2022 文贵直播：俄罗斯和中共为什么要成为伙伴关系？中俄联手将是世界的灾难
+title: 2/20/2022 文贵直播：乌克兰局势已无法挽回；普京从北京回去后变得沉默寡言，普京这几年性情大变、看了很多战争片
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/2043399/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/2043461/)
 
 秘密翻译组-北美组
 
