--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,7 +1,7 @@
 ---
-title: 20220220文贵大直播：习近平打台湾辽宁大连是重灾区
+title: 20220220文贵大直播：中共统治就六字三词 蔓延全球
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2045106/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2045135/)
 
 作者:东京樱花团小视频组
 
@@ -11,8 +11,6 @@ title: 20220220文贵大直播：习近平打台湾辽宁大连是重灾区
 
 * * *
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/yht.jpg)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
