--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,13 +1,17 @@
 ---
-title: GClubs卡将调整政策把战友分层次分时间分范围连在一起
+title: 真想买喜币的美国战友完全可以合法买,懂HPay的就会用
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046361/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046393/)
 
-G-TV视频链接：[https://gtv.org/video/id=621262801408ee3a03a256bd](https://gtv.org/video/id=621262801408ee3a03a256bd)
+G-TV视频链接：[https://gtv.org/video/id=621262f51408ee3a03a25717](https://gtv.org/video/id=621262f51408ee3a03a25717)
 
-**郭文贵先生：**所有的咱们现在整个咱们这个G-Clubs在半年内到一年内不会停的，大家不要……一定会继续卖的，但是卖的政策一定会调整，你比如说原来的一万的让不让你升，让你买新的不一定让你改，为什么？
+**郭文贵先生：**美国人现在是全世界数字货币80%的拥有者，如果按照这个说的话，美国几乎是80%到99%都是不合法的。这是美国最守法的国家。但你别忘了美国的财富从第一天到今天，积累的过程当中，按照美国今天的法律来讲，绝大多人的财富全都可以给他分掉，都不合法。这也是美国人这个国家守法，他知道法律的重要，同时他们也知道怎么会用法。他80%的全球的数字货币都在美国人手里边，我不相信他们都是合法通过KYC的。而且你像那个赵长鹏那个垃圾，他就没有KYC，那不都给美国人买走了么，是吧！
 
-大家会看到未来这整个G-Clubs它功能出来以后你们就明白了，我还不方便说，G-Clubs不是为了卖卡而卖卡，G-Clubs就是把咱们的战友分层次、分时间、分范围地和新中国联邦的未来连在一起的，所以说G-Clubs政策会调整，停卡是不可能的，好吧？我暂时说到这儿，但是呢有些政策现在还不能说，谢谢！
+真的想买的战友的美国人，我觉得你是完全可以合法买的，有很多。我再重申一遍，全世界没有一个国家有数字货币的法律，所有的所谓的监管的法律完全都是胡扯的。你告诉我美国谁是数字货币的监管者，它没有机构啊。SEC说这是证券它不能管。金融管理会它也管不了。没有一样管得，没有这个部门，这是一个角度。大家受的这个影响是不应该的。
+
+第二个，你合法地被美国政府说：你可以买那个H币什么的。就说法律全允许的，像现在买BitCoin一样在美国这样的买，BitCoin是代理商让你买的，同样H币也会在美国也会发生。快则三个月，慢则不会超过六个月，但是这个时间是真的不确定的，因为这个美国政府谁也说不了。我认为就合法的像买比特币一样，买以太坊币一样，可以在美国买，美加。
+
+那么H-Pay在全世界都是可以使用的，跟它没有任何关系。如果你懂得用H-Pay的时候，这个KYC的问题跟你就没有关系了。我就说到这儿，你们懂的。谢谢！
 
 字幕来源：[2022年2月4日《文贵大直播》全文字版](https://gnews.org/zh-hans/1961700/)
 
