--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,25 +1,41 @@
 ---
-title: 中共陷两难无奈暂缓尽职调查办法
+title: GClubs卡将调整政策把战友分层次分时间分范围连在一起
 ---
-`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2046304/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046361/)
 
-作者：波士顿五月花 Frankie背靠背
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-22-at-2.45.11-PM-2.png)图片来源：互联网
-2月21日，中共国人民银行、银保监会、证监会联合发布公告，原定2022年3月1日起施行的《金融机构客户尽职调查和客户身份资料及交易记录保存管理办法》（以下简称《办法》）因技术原因暂缓施行。相关业务按原规定办理。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMG_3641-1.jpg)图片来源：互联网
-《办法》是由中共国三个机构分别是人民银行、银保监会、证监会于2022年1月26日发布，并自2022年3月1日起施行。以”反洗钱“和”恐怖融资“等名义，阻碍银行间客户资金流转，特别是个人现金取款或转账5万元人民币需要登记，还对其他金融交易资金往来也要求登记。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-22-at-2.50.33-PM-1.png)图片来自中共国人民银行网站截图
-中共人民银行称，暂停《办法》是因为技术原因，即金融机构需要修订完善内部管理制度、信息系统、业务流程，并进行人员培训。[【1】](http://www.pbc.gov.cn/goutongjiaoliu/113456/113469/4477355/index.html)可见中共内部金融政策推行遇到强大阻力，政策出台和执行缺乏统一协调，执政能力弱，同时政策也陷入两难，骑虎难下。中共金融崩溃在即，一管立死，放也是死。
+G-TV视频链接：[https://gtv.org/video/id=621262801408ee3a03a256bd](https://gtv.org/video/id=621262801408ee3a03a256bd)
 
-不施行《办法》。中共国经济处在崩溃边缘，”先知先觉“的资金倾巢而出，外汇承受巨大压力，物价难以控制，”姜你军“、”蒜你恨“不久再现。
+**郭文贵先生：**所有的咱们现在整个咱们这个G-Clubs在半年内到一年内不会停的，大家不要……一定会继续卖的，但是卖的政策一定会调整，你比如说原来的一万的让不让你升，让你买新的不一定让你改，为什么？
 
-实行《办法》。对中共国原本金融系统就已经各种”梗“，更是雪上加霜，就如同”三高”病人打了毒素最高含量的”西安版”中共病毒疫苗一般。更是给数字货币数字钱包，特别是喜币（HCN/HDO）喜支付（HPAY），即将粉墨登场的躺平币（盖特币）和GETTR PAY带来完美的机会和市场。
+大家会看到未来这整个G-Clubs它功能出来以后你们就明白了，我还不方便说，G-Clubs不是为了卖卡而卖卡，G-Clubs就是把咱们的战友分层次、分时间、分范围地和新中国联邦的未来连在一起的，所以说G-Clubs政策会调整，停卡是不可能的，好吧？我暂时说到这儿，但是呢有些政策现在还不能说，谢谢！
 
-参考链接：[【1】公 告（附答记者问）](http://www.pbc.gov.cn/goutongjiaoliu/113456/113469/4477355/index.html)
+字幕来源：[2022年2月4日《文贵大直播》全文字版](https://gnews.org/zh-hans/1961700/)
 
-* * *
+编辑整理：Jacques；
 
-*编辑&发布：Vicky*
+字幕文件制作：小满；
+
+视频制作及上传：Cindy；
+
+G-News发布：小满；
+
+**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
+
+声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
+
+欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
+
+Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
+
+YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
+
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
+
+盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
+
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
+
+G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
