--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,33 +1,24 @@
 ---
-title: 有声｜普京下令“维和”部队进入乌克兰分离地区
+title: 乌克兰总统：我们谁也不怕！拒绝领土遭分割！
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2046233/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2046292/)
 
-By:**秘翻新闻**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/2345截图20220222145924_副本.png)图片来源：zelenskiy.official
+俄罗斯正式承认乌克兰境内两个亲俄分离主义人士控制的地区顿内茨克（Donetsk）、卢甘斯克（Lugansk）为独立实体，接着派遣部队以「维和人员」身分进入当地，加剧了西方国家担心引发大战的忧虑。
 
-**2022-02-22**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-31.png)图片来源 Aleksey Nikolsky/EPA-EFE
-据合众国际社2 月 21 日报道，俄罗斯总统弗拉基米尔-普京周一承认乌克兰东部两个分离主义地区为独立共和国，并对此发布法令，同时命令 “维和 “部队进入这些地区。
+2月22日，乌克兰总统泽伦斯基（Volodymyr Zelensky）对全国发表谈话时，指控俄罗斯破坏了为和平所做的努力，并拒绝对领土分割一事让步。
 
-该法令于周一晚间发布，并立即生效。根据其中的条款，普京承认了自称的顿涅茨克和卢甘斯克人民共和国，并下令俄罗斯武装部队执行维和职能。在签署法令前，普京向俄罗斯人民发表讲话称，乌克兰顿巴斯地区的局势再次危急，宣称现代乌克兰完全是由俄罗斯创造的”，而且乌克兰不仅仅是俄罗斯的邻国。它是我们自己的历史、文化、精神空间不可分割的一部分。
+据郭文贵先生爆料称，普京与习近平冬奥秘密会谈，普京计划拿下乌克兰从而要征服欧洲。希望乌克兰请坚持住，欧洲国家不要坐视不理，请对乌克兰施以援手，不然下一个就是你们自己。
 
-据《华盛顿邮报》报道，文件显示，这些协议已获得批准，并为期 10 年，这足以让俄罗斯在顿涅茨克和卢甘斯克建立军事基地，并在其与乌克兰的边界上联合巡逻。
+新闻来源：[yahoo](https://tw.news.yahoo.com/%E7%83%8F%E5%85%8B%E8%98%AD%E6%8B%92%E8%AE%93%E9%A0%98%E5%9C%9F%E9%81%AD%E5%88%86%E5%89%B2-%E7%B8%BD%E7%B5%B1%EF%BC%9A%E6%88%91%E5%80%91%E8%AA%B0%E4%B9%9F%E4%B8%8D%E6%80%95-031227561.html)
 
-这些举措进一步加剧了危机中的紧张局势，美国和欧洲领导人一再警告称，这次事件是俄罗斯为入侵乌克兰前所作的掩护。
+撰稿/发布：一叶知秋
 
-拜登对此发布了一项行政命令，禁止美国人在乌克兰所谓的顿涅茨克和卢甘斯克地区进行新的投资、贸易和融资。
+**更多资讯，请关注：**
+[多伦多蓝莲花农场 Gettr](https://gettr.com/user/Blue_Lotus)
+[多伦多蓝莲花农场 YouTube](https://www.youtube.com/channel/UCy1z2nsBLlE7BZyS_a_BMWw)
+[多伦多蓝莲花农场 Discord](https://discord.gg/awC74U4YwJ)
 
-此前欧洲领导人曾敦促普京不要承认这些分离地区，称会违反已维持7年的明斯克和平协议。
-
-新闻来源
-[**https://www.upi.com/Top\_News/World-News/2022/02/21/ukraine-invasion-joe-biden-vladimir-putin/2681645444138/**](https://www.upi.com/Top_News/World-News/2022/02/21/ukraine-invasion-joe-biden-vladimir-putin/2681645444138/)
-
-秘翻新闻 文洋 编译报道
-
-发布 : 恩典
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
