--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,26 +1,32 @@
 ---
-title: 台湾｜ 新党主席吴成典向汪洋表决心：分三阶段实现国家统一
+title: 视频&#124;新中国联邦的教育蓝图
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/2046053/)
+`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2046165/)
 
-**撰文/ 港台前线｜发布日期/ 22/02/2022**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/新黨主席吳成典向汪洋表決心：分三階段實現國家統一.jpg)
-**更多资讯请关注官方盖特｜please follow our Gettr （**[**https://gettr.com/post/pl6w8he0b9**](https://gettr.com/post/pl6w8he0b9)**)
-**
+制作：香草山视频部
 
-中共官媒新华社报导指，全国政协主席汪洋昨日（21日）在北京以视像会议方式会见台湾新党主席吴成典一行，并欢迎他们出席北京冬奥会闭幕式。
+2月20日，郭文贵先生在大直播中，谈到教育的重要性，在于能去除人们思想里的中共余毒，并针对新中国联邦的教育谈到以下规划。
 
-汪洋表示，台湾同胞以不同方式积极参与冬奥会，是两岸一家亲、共圆中国梦的生动体现，在中华民族走向伟大复兴的进程中台湾同胞不能缺席也不会缺席。他强调，台湾新党长期旗帜鲜明，始终支持统一、反对“台独”，为推动两岸关系和平发展、推进祖国和平统一进程鼓与呼、起而行，大陆同胞看在眼里、记在心里。
+第一，成立教育基金。郭先生认为，新中国联邦的教育应当完全免费，教师工资应当全球之最，每节课最低100美金。据郭先生透露，如今已有一千万美元的基金，并决定请参与G系列投资的合作基金捐款，让教育基金能达到一百亿美元，以保证教育经费充裕。
 
-对此，吴成典亦回应称，两岸同胞同文同种、血浓于水，两岸统一的历史大势无法阻挡，新党愿作先锋，在推进国家统一的征程上，共同点燃属于两岸人民的希望圣火。
+第二，组建教师团队。要求教师水平在哈佛之上，要吸引世界顶尖教师来到新中国联邦的学校任教，使教师团队做到世界翘楚。
 
-另外，台媒《联合报》报道引述吴成典发言时指出，两岸统一预期将经过三个阶段：第一先重回九二共识、一个中国，重启两岸事务性协商；第二阶段是结束两岸军事敌对状态，建立军事安全互信机制；最后阶段则彻底实现国家统一。
+第三，建立全新师生考评制度。教师的好评和差评由学生决定；学生的成绩则由第三方公正评定。师生考评制度必须要打破陈规，建立公平的考评制度。
 
-早前，郭文贵在直播中透露，中共党魁习近平与俄罗斯总统普京经闭门会议后达成共识，决定共同上演“痞子政治”，夺取乌克兰和台湾，今日早些时候，俄罗斯总统普京承认乌克兰东部两大亲俄势力范围成为独立国家，并同时派遣军队入驻，被视为正式对乌发动的侵略行为。
+第四，安排教学计划。学制的设立，教材的拟定，学时的安排，试卷的设计等都要科学化，做到真实有效，培养真善美的优秀人才。
 
-这令人不得不担忧，中俄两大极权势力野心的下一步，是否轮到台湾！
+第五、选择教学场所。教学场所可分为线上教学和线下教学。网络教学面向全球招生。实体则根据各国学生所需而定。
 
-来源｜[新華社](http://politics.people.com.cn/n1/2022/0222/c1024-32356622.html)、[郭文貴蓋特](https://gettr.com/post/pvwb8qfd01)、[聯合報](https://udn.com/news/story/7331/6115240?from=udn-catebreaknews_ch2)
+第六，制定教学目标。郭先生要求新中国联邦的学校，当为人类培养各领域的顶尖人才，为世界千年和平做贡献，这是郭先生从 “六四”以来的心愿之一。
+
+最后，愿每一个新中国联邦人都支持教育，愿全球爱好和平的人都一同来参与，让人们因着好的教育，可以有信仰，有知识，有智慧，有能力，有爱心，幸福地生活。
+
+发稿：林礼
+
+**更多资讯，更多关注**
+[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
+[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
+[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
 
  
 
