--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,21 +1,28 @@
 ---
-title: 拜登宣布对乌克兰东部独立地区实施制裁
+title: 【秘翻北美时评】美国前国务卿蓬佩奥将访问台湾
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2045514/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2045800/)
 
-撰稿：东京樱花团/百花李香
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-21.png)图片来自网站
-21日，美国总统拜登在白宫宣布，对普京批准独立的乌克兰东部亲俄派控制地区实施制裁。
+[BY:秘翻北美时评](秘翻北美时评)
 
-普京与乌克兰总统泽连斯基进行了电话交谈，强烈谴责了普京的决定，坚决支持乌克兰捍卫主权和领土完整。拜登还与法国总统马克龙和德国总理肖尔茨进行了电话会谈，讨论了接下来的措施，确认了相互间的合作。
+[2022-02-21](https://gtv.org/broadcast/watch/6214360a08ba8a07b1a11a4d)
 
-据白宫称，拜登签署了一项总统令，禁止美国人在亲俄派控制的东部省份顿涅茨克和卢甘斯克进行新的投资、贸易和金融交易。美国官员21日告诉记者，更多追加制裁措施将在22日宣布。
 
-[信息源](https://www.jiji.com/jc/article?k=2022022200171&amp;g=int#:~:text=%E5%A4%A7-,%E6%9D%B1%E9%83%A8%E7%8B%AC%E7%AB%8B%E6%89%BF%E8%AA%8D%E3%81%A7%E5%88%B6%E8%A3%81%E7%99%BA%E5%8B%95%E3%80%80%E3%83%97%E)
 
-*校对：东京樱花团/麗子
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+**今日主题：**
+
+**1.奥地利强制防疫政策将出现大逆转 **
+
+**2.美国前国务卿蓬佩奥将访问台湾 **
+
+**3.普京“今天将做出决定”是否承认分离主义共和国**
+
+🔗**GTV鏈接：**[https://gtv.org/broadcast/watch/6214360a08ba8a07b1a11a4d](https://gtv.org/broadcast/watch/6214360a08ba8a07b1a11a4d)
+
+发布：陸柒陸捌
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
