--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,82 +1,47 @@
 ---
-title: 澳喜访谈安华论新疆暴恐伪命题（下）
+title: 管孩子功歸七嫂,但七哥有不討論大人事和不撒謊兩原則
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2046378/)
+`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046411/)
 
-撰稿人：木本水源
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide1-21.jpg)
-（直播截图）
-所谓的新疆暴恐事件很多都是个人行为，均与当地政府官员作恶有关，类似事件在大陆地区屡见不鲜，但是在新疆就叫做恐怖事件。比如，公交车爆炸，抢公交车方向盘开到河里，不是真正意义上的恐怖活动，而是报复社会的行为。列举典型事例：
+G-TV視頻鏈接：[https://gtv.org/video/id=621263301408ee3a03a25741](https://gtv.org/video/id=621263301408ee3a03a25741)
 
-1990年4月巴仁乡起义
+**郭文貴先生：**這說起兒女，真的是我這一點真的感恩你七嫂。我覺得我是一個很寵孩子的人，如果按照我寵孩子，這倆孩子肯定不是今天這樣。你七嫂那是屬於很認真的、很嚴肅的。她家教就很嚴，她爸她媽都屬那種非常強悍型的，而且是非常非常嚴格家規的人。所以她從小的規矩，她就是這麼長大的，你七嫂子很強勢，你看我這樣的人都被她整得服服貼貼的，你想想她有多強勢吧，你想想她有多強勢，是吧？她對倆孩子就很強勢，就管得很嚴，這主要歸功你七嫂。
 
-1990年3月底，我和父亲从莫斯科到北京返回乌鲁木齐。4月4-5日，巴仁乡出事的时候我们还在火车上，但是在离开塔什干之前，和给我们送行的年轻人在一起吃饭喝酒聊天的时候同我说，吉尔吉斯斯坦人会有一些事情，当时没有概念也没有当作一回事，等我们到北京给家里打电话才得知新疆出事了，当时猛然想起临走之前有人讲过。巴仁乡事件给中共打了个措手不及，有20多人有武器，但是中共警报上面说是有几百个。
+但是我有兩樣原則這絕對是從小到大的，就是你看比如說我們家家規：孩子不要討論大人的事兒。我就覺得這個世界上沒有任何人你可以討論你父母，你個小屁孩兒討論父母的事兒，你不要介入到父母；而且中國人所有孩子都要（介入）父母的私人感情，父母的什麼恩恩怨怨全介入。
 
-此事的详情也可以到网上搜索，当年参与镇压巴仁乡起义的一位解放军战士，后来在美国申请政治庇护的时候，在他的陈诉书中提到了此事。当时他还是一个战士，整个村子被杀的光光的，战士们拿着枪在前面走，后面还有一队人督战。
+我最小的發小，最好的發小跟我爹我娘是非常不和的，非常不和的，但是它半點兒不影響我和他好。你說我那個照片跟前面的那個小伙子他爸爸就是我們當地的隊長，現在都在世呢，他就是跟我父親非常不和，但是它不影響我半點兒跟他好。你孩子不要介入到父母的糾紛當中去，也（別介入）父母的感情，這是我們的原則。
 
-他看到一个三岁的孩子趴在已经被打死的妈妈身边哭泣，班长说打死他，结果他没有打死孩子，之后就被强迫复员。由于政治不过关，他一直找不到好一点的工作，后来想方设法跑到美国。这是有组织有武器和中共政府之间的一场冲突。按照中共的定义，就算是恐怖活动。这是唯一的一场。
+另外一個就是我們家的孩子絕對不能撒謊。只要撒謊那是絕對不可以，所以他從來不撒謊。另外一個就是大家能看到我們作為山東人，我們這個家教裡邊孝敬。那孩子孝敬就別提了，就我兒子、我女兒的孝敬你們不可相信的，就是這種家庭文化，而且特別。就我們家庭的孩子從小跟我事業、生意完全沒有關係，而且是純粹的，純粹的。
 
-1995年在乌鲁木齐公共汽车爆炸案
+你去想想，他們從小金融上、生意上都做得很成功，財務上的獨立，對家庭上按著山東這種孔子家教的原則，對父母的孝敬，然後在社會上不撒謊、絕對不欺負軟的，那就我和你七嫂子不允許他半點兒欺負人，絕對善良。所以說我覺得這一點兒上真的是，我覺得這是個中國文化和現代文化現代化以後的成功的家庭，我認為是這樣子的。
 
-爆炸案发生两周后，参考消息报纸刊登一条消息，有一个叫王靖国的美国中央情报局的特务从新疆逃往哈萨克斯坦的过程中，在霍尔果斯被捕。而他就是爆炸案的直接责任人，目的是不让香港回归到中国，在中国内部制造混乱，想办法搞跨中共政府，爆炸案背景涉及国外因素。
+字幕來源：[2022年2月4日《文貴大直播》全文字版](https://gnews.org/zh-hans/1961700/)
 
-1995年吐鲁番和鄯善铁路沿线上有个小站，有两列货车油罐车，一列是从乌鲁木齐开往兰州，另外一列是从兰州开往乌鲁木齐，一列拉了3千吨原油，两列油罐车会车的时候发生爆炸，烧了三天三夜，中共称其为恐怖事件。
+編輯整理：Jacques；
 
-案件背后更多的是无可奈何。在库尔勒有一户年轻夫妻带着两个孩子，自己有两亩地，自给自足很幸福。有一天，来了三个汉族人，想要买他们的房子，并且在阿克苏给他们买个房子再给5万人民币现金，这一家人拿着钱就走了。但是他是农民除了种地以外别的都不会，到了阿克苏的房子里后，也不会赚钱，5万人民币要不了几年就没了，老婆看这样不行就带着孩子回娘家了。
+字幕文件製作：小滿；
 
-这个男的就喝闷酒，回想到底哪里出了问题自己就这么家破人亡了，然后他就觉得一切是从那三个汉人买房子开始的，于是打算回去看看，结果发现他的房子下面有钻井台往外泵油。他明白了，原来是自己脚底下的财富被人家看中了，然后就家破人亡了。之后他就策划了这起的爆炸，选择了交互站。
+視頻製作及上傳：Cindy；
 
-因为周围10公里没有居民，整个车站可能就3-4个人，然后爆炸案就发生了。如果当时石油上给他安排个工作，就算没有给5万人民币，看仓库看大门总能做得到，还会出这个事嘛？因为石油公司所有的工人都是自己带来的，当地人渐渐地失去土地和工作机会，然后以这种方式报仇或者反抗，但是这算是恐怖组织恐怖活动嘛？
+G-News發佈：小滿；
 
-2009年乌鲁木齐事件7.5事件
+**廣而告之：尊敬的戰友，你的每一篇文字、每一段視頻、每一段社交媒體發文都是壓垮駱駝的一根稻草，歡迎加入我們****——**[**日本銀河系農場****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，歡迎訂閱我們的油管頻道：**[**郭文貴先生直播精選**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；歡迎關注蓋特獨家文貴先生大直播精選發佈賬號：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
 
-2009年根据很多人的了解有一些人上街杀汉族人，由此引发了民族仇杀等等。当时我在伦敦，有个女孩学生在乌鲁木齐，给我视频，让我听乌鲁木齐的枪声。
+聲明：文中內容根據郭文貴先生直播視頻整理，如果文字內容與視頻內容衝突則以原視頻為準，標題僅為概括，標題與視頻內容衝突之處僅代表作者個人觀點。
 
-当时很多新疆当地人目瞪口呆，都不知道发生什么事情，为什么会出现这个事情？中共随即就把网给封了。通过外网搜集到的信息：美国自由亚洲电台采访参与镇压的武警战士，他们是7月1日从宁波到乌鲁木齐。怎么会提早知道并且到达现场？他们说这是碰巧，部队会碰巧？其次，受表彰的警察在东北任职，自述被派到乌鲁木齐。是不是他们提前知道会出事呢？
+歡迎喜聯盟進駐以及各農場兄弟姐妹們坐客串門，請通過以下方式關注及訂閱我們——
 
-后来经过4-5年的调查，5年以后总算把是事情的来龙去脉搞清楚了。这期间他们通过微信给我描述，其中有一个很奇怪的点，所有的人口袋都有喀什到乌鲁木齐的来回车票。因为在中共大陆，没有人会买来回车票的，而且维族是没有计划的民族根本不知道在乌鲁木齐会待几天。为什么突然会有3万多南疆人出现在乌鲁木齐市，没有办法解释。而我是根据来回车票断定中间有猫腻，具体过程就不讲了。
+Discord：[日本銀河系農場Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
 
-从英国去了2个人到喀什调查，结果是在7.5事件之前10天左右，6月26日左右，在韶关发生韶关事件，几千名当地人围追2名维族人，说他们强奸当地汉族女孩，导致被用棍棒打死。中共说7.5事件是维族对韶关事件的反应。
+YouTube：[日本銀河系農場](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民熱線](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[銀河系檔案放映館](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文貴先生直播精選](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
 
-6月26日前后在南疆、喀什、和田这一带，在电视上有个招工广告，是乌鲁木齐市政府发的，为了响应自治区政府解决失业问题的号召，乌鲁木齐国有大型工程面向南疆招工，欢迎各位有志青年报名，就算没有被录取，仍然承担来回车费。
+G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、[喜馬拉雅日本銀河系農場 G-News](https://gnews.org/zh-hant/author/jgalaxy2021/)、[日本銀河系農場-阿爾法星球](https://gnews.org/zh-hant/author/galaxyalphaplanet/) 、[銀河勇氣之星](https://gnews.org/zh-hant/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hant/author/newfoc/) ；
 
-如果我看到广告，我也会试一试的，即使没有被录取，也可以免费到乌鲁木齐玩一圈。所以就能解释短期出现3万人突然聚集在乌鲁木齐。这些人不会带很多钱，因为是来工作的。到乌鲁木齐后才发现广告是假的，或者乌鲁木齐人不知道这个事情，没有这么一个大型国有工程。而这些人没有地方住，身上的钱很快花完了，没有东西吃。这种情况下，维奸煽风点火就爆发了。
+蓋特：[日本銀河系農場@himalayajgalaxy蓋特](https://www.gettr.com/user/himalayajgalaxy)；
 
-但是，现场抗议的维族人还是很理智的，第一批上街的都是扛着五星红旗，也是第一批被打死的。中共的宣传是不会让你看到分裂分子打着中共国旗的，分裂分子一定会举着自己的旗帜。维族人上街只是想要表达自己的态度，不是分裂分子，只想讨个说法，结果被引导被镇压了。
+推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
 
-2013年10月28日天安门汽车炸弹
-
-从乌鲁木齐开车到北京不被一个警察拦住，都算你是个英雄。那辆车挂着新疆车牌，还有黑旗子，他妈妈和他老婆通行。怎么把车开到那里去的，实际上根本不可能的事情。出新疆就开始有麻烦了，不是货车，而是吉普车，谁都想在你身上揩油。是不是中共自己内斗搞的？
-
-2014年4月30日乌鲁木齐火车站发生的爆炸
-
-中共说法巴基斯坦维族人组织的，提前2周获得情报。但是，当时习的信息是晚于实际情况的24小时，而且是国家机密。这帮人怎么得到国家机密，怎么这么厉害，如果这么能耐怎么可能没有头脑呢，根本不会搞这么笨手笨脚的行动。
-
-巴基斯坦有很多退伍军人，2万美元找一个退伍军人狙击手，然后巴基斯坦到处都有卖枪的，完成任务再给5万美金。如果是我我肯定会这么干，把习打死就不是恐怖组织了而是英雄了。实际就是马大哈的这么一个人，在车站的出口处引爆炸弹。
-
-这件事让我想起了另外一起爆炸，2000年9月份，朱镕基来到乌鲁木齐开会，当天晚上带着一个随从到夜市，在维族人的摊子吃烤肉和维族人交谈。第二天在党委常委会上朱说我们接到的上报情报，新疆有多么危险，维族人有多坏，昨晚和他们聊天，他们也是很正常。
-
-结果第二天就发生一起爆炸，朱立刻坐飞机回北京了。当时新疆的头是王乐泉，在党委会上被朱骂。如果你说安全，那就让你看看恐怖分子。7量军车拉着满载的过期的炮弹，在乌鲁木齐的市中心最短的路西北路，南北最短的地方，车从这过，炮弹发生爆炸炸死300多人炸伤600多人，中共没有算恐怖袭击，反而成功把朱镕基炸跑了。
-
-新疆的维族人真的这么极端嘛？在新疆生活过的人都知道，维族人很喜欢喝啤酒吃烤肉，然后喝醉了就开始追女孩。新疆的维族人又是什么时候变得宗教的呢？1987年中共主动在乌鲁木齐专门设立了一所伊斯兰教学院，全疆设立了8所伊斯兰教学校。伊斯兰教学院学制5年，而其他的学校学制3年。
-
-第一批走上社会的伊斯兰教是1990年，他们毕业后新疆便开始出事。2013年的时候夏天，南疆很多地方有一群一群很时髦的维族年轻人，走街串巷传播伊斯兰教教义，给大家送古兰经，当地村民到派出所报警，结果派出所让村民闭嘴，他们没有人管到处传经。
-
-反过来说，如果维族人是暴徒是极端分子，那么当2015-18年中共官员住到维族人家里和他们的老婆女儿睡觉的时候，触及到个人利益时候，个人被侮辱的时候，有发生过暴恐事件嘛？都没有。维族人没有这个能力做这种事情。这些恐怖事件不是国外的人操控的，而是中共自己操控的，在需要的时候出现，不需要的时候就没了。
-
-16年前，新疆停止学校教维语，新疆没有一个人上街的，国外也没有人拿着牌子上街到中共大使馆门前抗议。相较之下，蒙古才叫民族，新疆只能叫一群人。蒙古有为民族抛头颅洒热血的勇气。维族人没有那个胆量和智慧。
-
-当恐怖分子要有胆量，因为他将会是另外的一个民族的英雄。维族恰恰缺乏的就是胆量和勇气。
-
-（本文纯属个人观点）
-
-资料来源：
-
-视频地址：[2022-02-15 《澳喜访谈》安華論新疆暴恐偽命題](https://gtv.org/video/id=620ad105432ae869226c6839)
-
-编辑：云彩
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
-
+G-TV：[日本銀河系農場](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
 
  
 
