--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,26 +1,29 @@
 ---
-title: 有声｜英国将为 74 岁以上的老人注射第4剂疫苗
+title: 日本疫苗接种死亡平均每天4例，专家：不影响继续接种
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2046365/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2046397/)
 
-By:**秘翻新闻**
+撰稿：东京樱花团/盖特第一批注册
 
-**2022-02-22**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/9-27.png)图片来源 Andy Rain/EPA-EFE
-据合众国际社2 月 21 日报道， 英国疫苗接种和免疫联合委员会，简称JCVI，于周一在一份声明中建议，为最脆弱的人在春季开始接种疫苗加强针，范围包括 74 岁以上的人、养老院居民和 12 岁及以上免疫功能低下的人。这将是为英国老年人提供的第四剂中共病毒疫苗，同时也是为免疫系统严重受损的人提供的第五剂疫苗。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/日本疫苗接种死亡平均每天4例，专家：不影响继续接种.png)来自网络
 
-JCVI 在声明中补充称，疫苗免疫力会随着时间的推移而下降，该委员会的疫苗接种主席 魏·沈·利姆(Wei Shen Lim )教授在声明中称，为了对人群中最脆弱的个体保持高水平的保护，建议在今年晚些时候接种额外的疫苗剂量。
+18日，日本厚生省（MHLW）召开了专家小组会议，讨论接种中共病毒（新冠病毒Covid-19）疫苗与不良反应之间的关系。
 
-该公告发布的同一天，英国首相鲍里斯·约翰逊（Boris Johnson ）取消了对中共病毒的限制措施。
+根据公开文件，从2021年2月17日开始接种到2022年1月23日，有1450人在接种疫苗后死亡（辉瑞公司1382人，摩德纳公司67人，阿斯利康公司1人）。 在2022年1月24日至2月4日期间，新增 24起死亡病例（辉瑞公司20起，摩德纳公司4起，阿斯利康公司0起）。
 
-新闻来源[**https://www.upi.com/Top\_News/World-News/2022/02/21/fourth-covid-19-vaccine-shot-over-75-vulnerable/9031645469430/**](https://www.upi.com/Top_News/World-News/2022/02/21/fourth-covid-19-vaccine-shot-over-75-vulnerable/9031645469430/)
+截至2022年2月4日，共有1,474人在接种疫苗后死亡的报告。
 
-秘翻新闻 文洋 编译报道
+辉瑞公司第三剂疫苗接种后的死亡人数在2022年1月23日前为2人，2022年1月24日至2月4日期间为11人。 摩德纳第三剂疫苗接种后报告的死亡人数在2010年1月23日前为1人，2010年1月24日至2月4日期间为4人。死亡总数为18例。1月24日至2月3日期间死亡人数为15例。
 
-发布 : 恩典
+专家小组指出，“目前，虽然第三剂后出现死亡病例，不影响继续接种”。
 
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
+信息源：
+
+[高齢女性が目立つワクチン接種後死亡報告は3回目18件含めて1474件](https://hc.nikkan-gendai.com/articles/277294?page=3)
+
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
