--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,46 +1,26 @@
 ---
-title: 喜支付实现零成本隔空支付和零成本灵活性的众筹、做空
+title: 有声｜英国将为 74 岁以上的老人注射第4剂疫苗
 ---
-`喜马拉雅日本银河系农场` [轉載自GNews](https://gnews.org/zh-hans/2046311/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2046365/)
 
-G-TV视频链接：[https://gtv.org/video/id=621262491408ee3a03a25695](https://gtv.org/video/id=621262491408ee3a03a25695)
+By:**秘翻新闻**
 
-**郭文贵先生：**但这就是喜支付给所有人带来的方便性，在中共国未来就真的是你……你就买个手机值多少钱，我把我的一年的钱我“咵”就转到海外去了，在空中呆着去了，是吧？那真的是H-Coin to the moon，就你的钱在月亮上呆着了，共产党够不着，习近平他再活1000年他够不着，他踮着脚跟都够不着，找不着你。这就是我们想追求的。
+**2022-02-22**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/9-27.png)图片来源 Andy Rain/EPA-EFE
+据合众国际社2 月 21 日报道， 英国疫苗接种和免疫联合委员会，简称JCVI，于周一在一份声明中建议，为最脆弱的人在春季开始接种疫苗加强针，范围包括 74 岁以上的人、养老院居民和 12 岁及以上免疫功能低下的人。这将是为英国老年人提供的第四剂中共病毒疫苗，同时也是为免疫系统严重受损的人提供的第五剂疫苗。
 
-那这种就让老百姓不能有任何的成本，他承受不了，你东北卖玉米的一共一年就弄了3万人民币，是吧？打死了才5000美金，他可能一次一次地付，一次300，一次200，一次200，你把这付完他自己钱没啦。
+JCVI 在声明中补充称，疫苗免疫力会随着时间的推移而下降，该委员会的疫苗接种主席 魏·沈·利姆(Wei Shen Lim )教授在声明中称，为了对人群中最脆弱的个体保持高水平的保护，建议在今年晚些时候接种额外的疫苗剂量。
 
-所以说这个H-Pay大家一定记住这个没有……这是零成本这是一个大家可以多用多有，能开发很多价值的，就比如说你们想搞一个未来的基金，小的众筹，小的支付，或者一个小的很小客户的临时性的投资。比如说Facebook，好多家做空它，已经是一个月以前了。
+该公告发布的同一天，英国首相鲍里斯·约翰逊（Boris Johnson ）取消了对中共病毒的限制措施。
 
-那比如说有些空头公司想介绍……你想……我想跟一把，那现在我青藤我找上一些人200个人大家一人筹上10块钱20块钱就来一把，那你是100%会赚的这种钱，因为这种做空的这种公司它一定是赚，只是赚多赚少的问题，你别贪，那这个时候的钱要进，又快又进，你不能有成本，一共投了两三千美金你成本就一下子几笔就给你整没了，所以它是很多很多作用的，你们看的问题很准。
+新闻来源[**https://www.upi.com/Top\_News/World-News/2022/02/21/fourth-covid-19-vaccine-shot-over-75-vulnerable/9031645469430/**](https://www.upi.com/Top_News/World-News/2022/02/21/fourth-covid-19-vaccine-shot-over-75-vulnerable/9031645469430/)
 
-字幕来源：[2022年2月4日《文贵大直播》全文字版](https://gnews.org/zh-hans/1961700/)
+秘翻新闻 文洋 编译报道
 
-编辑整理：Jacques；
+发布 : 恩典
 
-字幕文件制作：小满；
-
-视频制作及上传：Cindy；
-
-G-News发布：小满；
-
-**广而告之：尊敬的战友，你的每一篇文字、每一段视频、每一段社交媒体发文都是压垮骆驼的一根稻草，欢迎加入我们****——**[**日本银河系农场****Discord****群**](https://discord.com/channels/805765245758472202/851632878567948351)**，欢迎订阅我们的油管频道：**[**郭文贵先生直播精选**](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)**；欢迎关注盖特独家文贵先生大直播精选发布账号：**[**@MilesGuolive1**](https://gettr.com/user/MilesGuolive1)
-
-声明：文中内容根据郭文贵先生直播视频整理，如果文字内容与视频内容冲突则以原视频为准，标题仅为概括，标题与视频内容冲突之处仅代表作者个人观点。
-
-欢迎喜联盟进驻以及各农场兄弟姐妹们坐客串门，请通过以下方式关注及订阅我们——
-
-Discord：[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)；
-
-YouTube：[日本银河系农场](https://www.youtube.com/channel/UCYfGHsj66eHQFqAt8pYsXHA)、[小七工作室](https://www.youtube.com/channel/UCpJIF2wIaqb4VBqF3-V_7KA/videos)、[刁民热线](https://www.youtube.com/channel/UCybJyCc-WPhvAXHnjoh06SQ) 、[Hello Friend 你好,朋友](https://www.youtube.com/channel/UCTc1E9DAHXliBuHIveYORjQ/featured)、[Galaxy NFSC](https://www.youtube.com/channel/UCuoWQD3AbdCLi4VkSlYjyRQ/videos)、[银河系档案放映馆](https://www.youtube.com/channel/UCJ0FJt00cutaMfhE2kuXd3A) 、[郭文贵先生直播精选](https://www.youtube.com/channel/UCgvFZMztYVyUVRQgf5rHe0w/videos)；
-
-G-News：[jgalaxy2021foreign laguages](https://gnews.org/author/jgalaxy2021/)、 [喜马拉雅日本银河系农场 G-News](https://gnews.org/zh-hans/author/jgalaxy2021/)、[日本银河系农场-阿尔法星球](https://gnews.org/zh-hans/author/galaxyalphaplanet/) 、[银河勇气之星](https://gnews.org/zh-hans/author/yinyongqi/)、[NewFOC](https://gnews.org/zh-hans/author/newfoc/) ；
-
-盖特：[日本银河系农场@himalayajgalaxy盖特](https://www.gettr.com/user/himalayajgalaxy)；
-
-推特：[日本銀河系農場\[email protected\]推特](https://twitter.com/HJapanGalaxyII)；
-
-G-TV：[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/1-321.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
