--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,23 +1,23 @@
 ---
-title: 乌克兰总统：我们谁也不怕！拒绝领土遭分割！
+title: 外国记者代表组织批评中共在奥运期间制造的糟糕待遇
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2046292/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2046358/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2345截图20220222145924_副本.png)图片来源：zelenskiy.official
-俄罗斯正式承认乌克兰境内两个亲俄分离主义人士控制的地区顿内茨克（Donetsk）、卢甘斯克（Lugansk）为独立实体，接着派遣部队以「维和人员」身分进入当地，加剧了西方国家担心引发大战的忧虑。
+#### 撰稿：彩虹
 
-2月22日，乌克兰总统泽伦斯基（Volodymyr Zelensky）对全国发表谈话时，指控俄罗斯破坏了为和平所做的努力，并拒绝对领土分割一事让步。
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-2-13.jpg)图片来源：InsiderSport
+《国会山报》2月21日根据《卫报》（The Guardian）报道，中国外国记者俱乐部（FCCC）是一个代表外国记者的组织，该组织发布了一份声明称，它对（中共）安全官员在奥运会期间对待经认可的外国媒体的方式感到“沮丧”，称中共政府与媒体互动的方式“违背了奥林匹克精神”。
 
-据郭文贵先生爆料称，普京与习近平冬奥秘密会谈，普京计划拿下乌克兰从而要征服欧洲。希望乌克兰请坚持住，欧洲国家不要坐视不理，请对乌克兰施以援手，不然下一个就是你们自己。
+声明指：“（中共）政府的干预在奥运会期间经常发生。”作为（中共）政府支持的网上骚扰和宣传战役的一部分，一些外国记者成为了在线骚扰的目标和受害者。
 
-新闻来源：[yahoo](https://tw.news.yahoo.com/%E7%83%8F%E5%85%8B%E8%98%AD%E6%8B%92%E8%AE%93%E9%A0%98%E5%9C%9F%E9%81%AD%E5%88%86%E5%89%B2-%E7%B8%BD%E7%B5%B1%EF%BC%9A%E6%88%91%E5%80%91%E8%AA%B0%E4%B9%9F%E4%B8%8D%E6%80%95-031227561.html)
+声明举例说：“在一次奥运会滑雪比赛之后，一名外国记者被一名北京奥运会官员阻止在奥运会混合区采访一名香港运动员，而这块区域应该是受国际奥林匹克规则管辖的。最明显的是，荷兰国家广播公司的一名记者在一次电视直播中被便衣保安人员拖出镜头，尽管他几分钟前还站在警察指示的位置上。”
 
-撰稿/发布：一叶知秋
+中国外国记者俱乐部在声明中强调，“中国外国记者俱乐部敦促中共当局遵守他们自己对外国媒体在中国的认可规则：即允许记者在没有国家干预的威胁下预订和进行自己的采访，并在公共区域自由报道。不幸的是，在全球对中国的关注比以往任何时候都多的时候，这两条规则都没有得到执行。”
 
-**更多资讯，请关注：**
-[多伦多蓝莲花农场 Gettr](https://gettr.com/user/Blue_Lotus)
-[多伦多蓝莲花农场 YouTube](https://www.youtube.com/channel/UCy1z2nsBLlE7BZyS_a_BMWw)
-[多伦多蓝莲花农场 Discord](https://discord.gg/awC74U4YwJ)
+**新闻来源**
+
+[Journalists group calls China’s handling of games ‘contrary to the Olympic spirit’](https://thehill.com/homenews/media/595186-journalists-group-calls-chinas-handling-of-games-contrary-to-the-olympic)
 
  
 
