--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,24 +1,40 @@
 ---
-title: 视频&#124;中共使用机器人和虚假帐号影响冬奥会讨论
+title: 北京猛烈抨击了俄罗斯可能入侵乌克兰的预测
 ---
-`MOSvideo` [轉載自GNews](https://gnews.org/zh-hans/2046278/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2046337/)
 
-制作：香草山视频部
+翻译：lovemiles
+编辑：Mttfly
 
-美国媒体2月18日报导，中共使用机器人、虚假帐号等工具选择性编辑宣传故事，以影响有关冬奥会的讨论。
+**【雅典娜快讯】，紧贴时事脉搏**
 
-据报道，该媒体与非营利调查新闻编辑室ProPublica发现，推特上存在一个中共虚假帐号网络。该网络有超过3000个帐号，通过分享带有相同评论的中共外宣推文，以协调行动，影响有关冬奥会的讨论。这些帐号普遍创建不久，没有关注者，推文仅以转发中共外宣推文为主。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/习近平、普京.jpg)图源：联合日报
 
-目前推特已经通过电子邮件声明，确认数百个账户已被封禁，同时表示，将进一步调查这些帐户与国家支持的信息运营之间的联系。
 
-中共冬奥会的虚假不仅限于虚假帐号操纵舆论。根据郭文贵先生在大直播中的爆料，中共冬奥会场的雪为人造假雪，裁判被中共买通非公正判罚，中共参赛运动员国籍造假。中共冬奥会的呈现只有虚假和丑陋。
+中共国外交部发言人表示，在东西方对峙日益加剧之际，华盛顿应该帮助缓和俄乌边境的紧张局势，并放弃对莫斯科采取具有持续性威胁的惩罚措施。
 
-发稿：林礼
+汪文斌周五在新闻发布会上发表讲话，对美国关于俄罗斯武装部队可能很快开始在东欧国家边境发动进攻的预测发表看法。
 
-**更多资讯，更多关注**
-[**全球农场联盟委员会GTV官方账号**](https://gtv.org/user/5f58c34e245d3c05799fe236)
-[**全球喜马拉雅农场联盟委员会Gettr**](https://gettr.com/user/GlobalAlliance)
-[**喜马拉雅联盟大使馆全球客服中心Discord**](https://discord.gg/fphuQefJ)
+据他介绍，“美国情报界的可信度已经在伊拉克和乌克兰等多个场合受到考验。”“我想再次强调，在寻求乌克兰问题的政治解决过程中，任何人都不应竖起战争烟幕，以此为杠杆。或用制裁来威胁他人，更不应煽动国家之间的对抗。”
+
+他的讲话是在最近几个月俄乌两国共同边界的严峻形势下发表的，西方领导人一再表示担心莫斯科在入侵乌克兰之前，将军队撤到边境地区。
+
+今年一月，美国总统乔·拜登威胁他的对手俄罗斯总统弗拉基米尔·普京，如果普京允许俄军入侵乌克兰，他将对其实施前所未有的严重制裁。*“*他从未见过像我所要实施的制裁”，拜登当时警告说。
+
+然而，克里姆林宫一再否认它有任何攻击计划，并辩称其军队在其领土上的移动是内部事务。在一连串的指责中，俄罗斯开始寻求北京公开支持，以此从西方获得安全保证，以排除北约扩大的可能性。
+
+习近平和普京本月早些时候发表联合声明，呼吁以美国为首的军事集团不要进一步扩张，放弃*“*冷战”思维。
+
+参考链接：[China blasts ‘smokescreen of war’](https://www.rt.com/russia/549882-china-blasts-smokescreen-war/)
+
+*发布：Mttfly*
+
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
